--- a/gb/ncid282_10.md
+++ b/gb/ncid282_10.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11607221.md#1" target="_blank">防中共灭顶式渗透 郭文贵：美国应四管齐下</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11607221.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/b6bafc0733182107b970020f8791381c-150x120.jpg" align ="left"></a>美国的川普政府正在积极处理中共问题，包括对欧美社会的侵略，以及对香港人、新疆人民与法轮功学员等民众的残害等，中国反共富豪郭文贵在直播中指出，美国政府必须4管齐下，包括美国与中国经济脱钩、保护台湾与香港，以及要求中共开放防火墙等方式，进一步遏止中共对美国灭顶式的侵略。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 1:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11606156.md#1" target="_blank">微商乱象 人气减肥胶囊中含禁药</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11606156.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-478009091-150x120.jpg" align ="left"></a>大陆微商朋友圈中流传的古方减肥药“燃脂减肥胶囊”，被认定为假药，且含有对人体有毒有害的禁药———西布曲明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 4:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11606079.md#1" target="_blank">涉走私船只被捕 美华裔海军上尉多次撒谎</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11606079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/180301-N-CL765-013-150x120.jpg" align ="left"></a>一名持有海军最高安全机密许可的华裔美国海军上尉及妻子于10月17日涉嫌向中国走私船只被捕。相关文件显示，这名海军上尉在接受政府背景调查时多次撒谎，他也多次向海军指挥官撒谎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 12:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11605495.md#1" target="_blank">清华教授遇车祸 5处粉碎性骨折 不治而愈</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11605495.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/2019-5-8-wang-jiu-chun_01-150x120.jpg" align ="left"></a>“我倒下，脑袋撞到地上。此时车不但未停，还继续从我右腿上轧过来。我听见我的脚和腿的骨头‘咔，咔，咔，咔’被车轮压碎的响声……”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 10:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11605693.md#1" target="_blank">被标签为黄晓明老婆 Angelababy罕见吐心声</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11605693.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/DSC_0287-1-150x120.jpg" align ="left"></a>以模特身份在香港出道的Angelababy（杨颖），2015年与大陆男星在上海举行婚礼时场面盛大，备受关注。俨然公主与王子般的两人，因一年来鲜少公开互动被屡传婚变。而对于总被标签为“黄晓明老婆”，Angelababy近日在阿雅主持的综艺节目《奇遇人生》中，罕见吐露心声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 7:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11603833.md#1" target="_blank">中共推社会信用制度 逼外企做价值抉择</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11603833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/fad45e73d3ef5f99717549587310f7e0-150x120.jpg" align ="left"></a>针对中国欧盟商会提出警告，中国2020年实施社会信用制度，将掌握、决定在中国外企的生死，台湾战略模拟学会研究员何澄辉说，社会信用评等不单只是新制度，已变成一种抉择，是要选择中共的价值，还是已运行数百年的自由民主价值。商会认为如果社会信用评等不会提高交易成本，就要想办法适应，但这不仅是交易成本，更是存立己足的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 3:01 AM							</td></tr>
@@ -12,8 +15,8 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/17/n11594451.md#1" target="_blank">学生赴陆食宿全免 台立委质疑被统战</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/17/n11594451.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/9a07dd1c322eb23428f90cf253aa9300-150x120.jpg" align ="left"></a>苗栗通霄国中、国小有百余位学生，于双十连假期间以“体育交流”名义前往中国参访。民进党立委黄国书17日召开记者会表示，此次交流的主办单位是福建省“海峡两岸社会组织服务中心”，参加人员只需缴交新台币1千元费用，食宿皆由对岸招待，质疑根本是接受中共“统战”，要求相关单位密切注意，并建立通报机制。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 10:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/17/n11594661.md#1" target="_blank">陕西当局预在秦始皇陵旁建酒店？网民炮轰</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/17/n11594661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/08/608271037021898-150x120.jpg" align ="left"></a>近日传出陕西秦始皇陵控制带内要建设西安泛海喜来登酒店的消息，17日，中共陕西省文物局文物处负责人称，此项目不在保护区内。网民纷纷表示不满，还有的表示担心：“晚上睡坟地？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 10:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/7/n11574432.md#1" target="_blank">【历史回眸】“反共才是爱国”的倪匡</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/7/n11574432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/Ni_Kuang_2007-150x120.jpg" align ="left"></a>倪匡，原籍浙江镇海，1935年5月30日出生于上海一知识分子家庭，倪匡是家中老四，本名倪聪。他小时候跑去看过枪毙“反革命”，给他留下深刻印象，那种场面，“回来吃不下饭。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 9:07 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/16/n11592863.md#1" target="_blank">隐形资金大出逃 关键数据揭中国走资“后门”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/16/n11592863.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1405111723491649-1-600x400-150x120.jpg" align ="left"></a>虽然过去几年北京当局致力去杠杆和反贪腐，打击影子银行和地下钱庄，但近日，海外金融研究机构的一份数据显示，“后门”走资的情况仍然严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 5:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/15/n11590365.md#1" target="_blank">中国是全球泡面最大消费国 专家拉健康警报</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/15/n11590365.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/140814135758985-150x120.jpg" align ="left"></a>泡面可快速、方便地果腹，它因此而成为忙碌的现代人首选的快餐之一。而中国更是由于拥有众多忠实粉丝而成为全世界泡面消费第一大户。不过，专家警告说，方便面虽能果腹，而且便宜，甚至美味，但缺乏关键的营养素。它已经造成东南亚数几千万儿童过瘦或过胖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月16日 8:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11607259.md#1" target="_blank">土耳其政府推亲共政策 引发公民不服从运动</a><br></h3>中国维吾尔族遭受中共迫害，常会选择流亡到土耳其，不过近年土耳其政府亲共立场明显。有外媒披露，土耳其现正积极将该国首都伊斯坦堡“中国化”，引发受迫害维吾尔难民的不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 11:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/23/n11606126.md#1" target="_blank">每日三退声明精选（2019/10/22）</a><br></h3>名字为化名，本人从小受到了党匪的宣传，认为入党是件“特别的光荣”。18岁去当兵入伍，军事成绩优秀，被发展为中共党员。退伍后，工作多年，发现这个共产党全是谎言。本人工作的内容也用党的宣传有关系，宣传的都是党的“丰功伟绩”，不坏的一律不许发表。近一年来，通过翻墙，看到了很多共产党的真相，也了解了一些法轮功的真相。对当初加入共产党特别特别的后悔，发自内心的要求退党.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11604131.md#1" target="_blank">又现杀医案 甘肃患癌男子捅死主治医生</a><br></h3>大陆又出现“杀医”案件，10月22日10时许，一名44岁的甘肃省人民医院女医生在医院遭刀捅身亡。其曾系犯罪嫌疑人的主治医师。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 5:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/22/n11604104.md#1" target="_blank">陕交警菜刀伤人被行政拘留 网民：惩处过轻</a><br></h3>近期，陕西榆林市子洲县公安局交警大队辅警安某，在饭店用餐时，与一起用餐的张某发生语言冲突后，持菜刀伤人。几天后，安某才被行政拘留。网民对安某受到的惩处太轻表示不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 5:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/21/n11601842.md#1" target="_blank">云南一岁幼童误食36颗磁力珠 险肠道穿孔</a><br></h3>一周前，云南红河的王女士带一岁的女儿月月到医院检查身体，却意外地发现女儿腹中满是磁力珠。医生为月月做了详细检查后发现，排列在月月胃里的磁力珠共有34颗，另有2颗已经进入肠道，情况十分危急。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 1:28 PM							</td></tr>
@@ -26,8 +29,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/20/n11599864.md#1" target="_blank">每日三退声明精选（2019/10/19）</a><br></h3>因为一次机会接触了翻墙，从此对中共的真相看清楚了。但是，对于中共的邪恶我可能真的是因为被骗得太久了还没体会到。这次反对送中加上习近平在尼泊尔充满仇恨的言论，让我对这个政权的印象真的完全颠覆了。什么宣传净是骗人，加上身边海外的华人一直都不可信赖，完全不讲真话。现在我决定在网路安全等级（可能是白名单）出来之前，赶快在这里，发出退出党团队的正式声明。我也看透了，大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月20日 11:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/19/n11599552.md#1" target="_blank">豫男童被老师投毒脑死亡 家长：被要求弃疗</a><br></h3>河南焦作市解放区萌萌幼儿园女老师王某，对23名孩子下毒，其中，5岁的王俊熙经抢救后仍被宣布脑死亡，仅靠呼吸机维生。近日，俊熙的家长在网上指控，当局为严惩投毒犯，竟要求家属拔喉放弃治疗。事件曝光后，舆论哗然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月20日 6:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/18/n11596085.md#1" target="_blank">每日三退声明精选（2019/10/17）</a><br></h3>在学生时期一直受洗脑教育，不明真相加入了共产党，经历了大半人生，对国内的洗脑宣传越发反感，经过多年翻墙了解历史，了解现实的真相后，才发觉之前的认知和人生价值观的缺陷，在墙外了解到中美贸易战的时事和香港反送中事件的真相，真正了解了CCP的所做所为，为自己加入这个邪恶组织为羞耻，同时也为中国的前途光明担忧起来，希望能在有生之年看到这个邪恶的力量能被消灭，我主动退.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月18日 11:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/17/n11593605.md#1" target="_blank">丰巢智能柜刷脸取件现漏洞 相关功能被取消</a><br></h3>近期，大陆丰巢速递智能柜（简称丰巢）推出人脸识别取包裹功能，然而被发现使用他人照片即可成功提取快递。随后丰巢官方回应，已将相关功能取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 4:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/17/n11593705.md#1" target="_blank">每日三退声明精选（2019/10/16）</a><br></h3>我是一名新闻工作者，是“六四”受迫害者之一。因为不顺从当局的言论而被断送了前程。如今看来，坏事都是好事。我在此申请退出中共团和少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 12:50 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/16/n11591662.md#1" target="_blank">展数百赝品？重庆大学博物馆被批造假</a><br></h3>重庆大学博物馆在该校90周年校庆前夕开馆，但该博物馆展出的大量文物被质疑赝品，有造假之嫌，引起舆论广泛关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月16日 3:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid282_10.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_10.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid282_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_10.htm">http://www.epochtimes.com/gb/ncid282_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
