--- a/gb/news392_10.md
+++ b/gb/news392_10.md
@@ -1,4 +1,19 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660687.md#1" target="_blank">袁斌：“香港暴徒的酬劳”？十足的惊天大谎！</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660687.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c94000f23e648a_ttl7dayaRE___________ytfb-3-150x120.jpg" align ="left"></a>反送中烈火延烧至今，中共为了抹黑年轻的香港抗议者，蒙骗民众和舆论，从而给暴力镇压制造借口，费尽心机编造了大量谎言。其中之一就是诬陷他们是“有偿示威”。日前中共政法委官方微信号 “曝光”的所谓“香港暴徒的酬劳”，更是这类谎言的登峰造极之作！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 9:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660999.md#1" target="_blank">林辉：承天命演绎忠义豪情《水浒》为何被批？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1601151043451695-600x400-150x120.jpg" align ="left"></a>上个世纪50年代，中共主流看法是《水浒》是描写歌颂农民起义的，所以受到吹捧。文革时期，《水浒》先被当作封建文化的糟粕弃之毁之，后来在毛的指导下又获“重评”。文革后期，毛下指示开始批《水浒》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 6:46 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/28/n11415318.md#1" target="_blank">宋征时：呼吁中国军方切勿血洗香港！</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/28/n11415318.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/20190728-CCP-Qiang-Poon-1-1-150x120.jpg" align ="left"></a>本人是一个普普通通的海外知识分子。因为看到诸位正面对着与香港前途和中国前途息息相关的重大事件，所以想直言不讳地与大家谈谈自己的想法。同时，我也作好了因此而被报复暗杀的思想准备。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 4:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660042.md#1" target="_blank">谢田：区块链背后中共的四大图谋</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660042.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/951165836-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>中共近来突然推区块链、大数据、人工智能等国家级研发计划，搞数字货币。其真正目的，可能不像坊间说的那么简单：只是中共脑子一热、刺激经济的下策。区块链最重要的应用，在于加密货币，中共如果搞加密货币，会有什么考量？是希望灭掉美元霸权？中共覆亡在即，区块链会是中共的珍珠港和滑铁卢吗？无论如何，区块链的背后，至少有中共在金融上的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 2:48 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank">【名家专栏】导弹防御是美安全新基石（上）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1261QN-150x120.jpg" align ="left"></a>本文将探讨两个非常重要的问题。首先，能否在削减核武器的同时部署导弹防御系统？ 其次，有限的导弹防御系统能否可靠地抵御核导弹威胁？ 我对这两个问题的回答都是“能！”但同时，也有一个很重要的警告：如果俄罗斯和中共都把有限导弹打击威胁作为自己的战略，那么美国的导弹防御系统需要继续得到改进，就能够可靠地抵御这种威胁。此外，其它.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 8:19 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660450.md#1" target="_blank">王友群：章启月正在步吴建民的后尘</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660450.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-52065125-600x400-1-150x120.jpg" align ="left"></a>章启月是中共驻纽约总领事。
+
+吴建民是中共资深外交官，在海外积极追随江泽民迫害法轮功的代表人物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 7:03 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660385.md#1" target="_blank">谭笑飞：有感于明慧网恶人榜</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1506041924242737-299x400-150x120.jpg" align ="left"></a>11月15日，明慧网更新了恶人榜。这份名单包括了上至发动迫害的中共前党魁江泽民，下至参与迫害的居委会村委会工作人员，共计105,580人，而且还包括了个人信息和恶行。这是被迫害的法轮功学员收集整理的第一手资料，数据详实，证据确凿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 5:15 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658485.md#1" target="_blank">【名家专栏】中共造假宣传 扮成碳减排典型</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658485.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-500863152-150x120.jpg" align ="left"></a>中国正在散布关于碳排放的假消息。事实上，中国正在使用最便宜的能源追求经济发展。同时，它却可以声称达到了环保目标，并让西方的“专家”指出，中国是承担环境责任的典范。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 11:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659821.md#1" target="_blank">胡烈：香港问题中共才是元凶</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910270512292188-150x120.jpg" align ="left"></a>昨天习近平在巴西参加金砖国家峰会时就香港局势发表讲话说，：“止暴制刮，恢复秩序是香港当前最紧迫的任务。”接合本月初习近平会见香港特首林郑月娥来看，香港的局域会更加严峻。因为大陆这种专制体制，所有的人都是看着上面来行事，习近平的讲话会让香港的警民冲突更加严重，国际社会如果不介入，黑警们会更加肆无忌惮的迫害抗议者。但同时也.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 5:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659778.md#1" target="_blank">明清：港警双十一枪杀之思</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659778.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191111104112100615-1-150x120.jpg" align ="left"></a>11月11日，在中共统治的香港，港警在白天公然开枪射杀两个手无寸铁的抗议者。从录像看，一名警察追赶一群蒙面人，被追赶者向人行道一侧散开。该警察在并没有抗议者近身的时候准备好掏出手枪，同时向抗议者方向移动，大喝一声，把枪顶在了一个走上前的白衣人的胸膛。很显然，抓人是警察的目的之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 3:28 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659726.md#1" target="_blank">李铭：十万恶人榜 罪行无所逃</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659726.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1506041924242737-150x120.jpg" align ="left"></a>更新后的“明慧网恶人榜”最近问世。从二零一九年五月底《通告》发表以后，迄今共收集了105,580名参与迫害法轮功学员者的名单，并将他们的个人信息和恶行等记录在案，目的在于制止迫害、维护善良、支持正义。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 2:32 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659632.md#1" target="_blank">海风：中共军警攻击港中大犯下反人类罪</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659632.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191111103838100615-600x400-1-150x120.jpg" align ="left"></a>根据《安全学校宣言》规定，国与国之间开战若攻击中小学校和大专院校是触犯危害人类罪（又称反人类罪）的行为。可中共政府却在本国动用武装力量对学校进行暴力袭击。这在人类历史上还是首次。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 1:29 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659327.md#1" target="_blank">袁斌：被政治绑架，国足只能是扶不起的阿斗</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659327.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2017-09-6-LiRongShi-World-Cup-Zheng-Zhi-842970016-600x400-150x120.jpg" align ="left"></a>最近两场世预赛，国足先是创纪录的与菲律宾踢平，接着又创纪录的败给了叙利亚——一个战火纷飞、支离破碎，几乎都难以称为国家的国家！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 12:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659340.md#1" target="_blank">骆克仁：谁的脑子被驴踢到了？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo6219976191188773153-1-600x400-1-150x120.jpg" align ="left"></a>七月流火，九月授衣。香港因“反送中”引起的抗争六月迄今，竟已逾五月。港警对市民的控制不断升级，香港朋友告诉我：“很多非本地同学准备离开香港，本地同学想移民，很多人一方面放不下香港，又要继续坚持下去抗争……”。
 
 香港新闻几已不忍卒睹，港警扔掷烟雾弹，示威者戴着口罩、面具仓皇躲避，中大校园宛如战场，校方宣布学期结束.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 7:49 AM			</td></tr>
@@ -14,20 +29,16 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657854.md#1" target="_blank">程晓容：中共强推“爱党” 事实驳红色宣传</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657854.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/11/611161321511550-150x120.jpg" align ="left"></a>香港人不以中共血旗为傲，因为那面旗子代表耻辱，带来恐怖和毁灭。中共摧毁了民族传统，毁了中国的声望和中国人的信誉，它没有资格评说爱国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 5:02 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657412.md#1" target="_blank">袁斌：中共制造内地生在港安全受威胁的谎言</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657412.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191111103844100615-600x400-1-150x120.jpg" align ="left"></a>近日，香港警察在多所大学尤其是中文大学疯狂施暴，将昔日安静的校园活生生的变成了销烟弥漫的战场，受到了全世界的谴责。与此同时，网上流传出大陆生撤离香港中大的消息，并附有警察水警轮接载他们离开的照片。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank">杨宁：东德国防部长之选择给中共军方的启示</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/CFP479878316-600x400-150x120.jpg" align ="left"></a>霍夫曼说得好，军队不可能也不能违背人民的意愿，军队也不应是党和国家领导层对付内部矛盾、维持自身统治的工具。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:21 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11655166.md#1" target="_blank">程晓容：香港——留给谁的时间不多了？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11655166.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911122333011501-150x120.jpg" align ="left"></a>黄之锋还说：“现在留给香港的时间不多了。”此言引人深思。事实上，众人思考和选择的时间都已非常有限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11654654.md#1" target="_blank">袁斌：镇压反送中是全世界认识中共的活教材</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11654654.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/WhatsApp-Image-2019-11-12-at-1.27.40-AM-600x400-2-150x120.jpeg" align ="left"></a>继香港警察10月1日在荃湾近距离开枪射击一名18岁学生后，港警11月11日再次开枪射击抗议者，啪啪啪，而且接连开了三枪！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 12:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11654166.md#1" target="_blank">【名家专栏】10年52万亿能修复美医保吗？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11654166.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/01/1501120056072546-150x120.jpg" align ="left"></a>美国参议员伊丽莎白?沃伦（Elizabeth Warren）最近提出的《全民医保提案》（Medicare For All proposal）中所公布的10年52万亿美元的价格和所建议的支付方式，已经引起了广泛的关注和争论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 11:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653994.md#1" target="_blank">王赫：香港人——当今世界的敲钟人</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653994.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304192188-150x120.jpg" align ="left"></a>对港人来说，现在正是漫漫长夜，目前我们并不确切知道，多少黑暗的狂潮还将汹涌而来？我们也不确切知道，驱离长夜的阳光何时到来？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:56 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653868.md#1" target="_blank">周晓辉：川普坦言手握主动权 击破北京幻梦</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653868.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1187191383-600x400-1-150x120.jpg" align ="left"></a>川普的演讲预示着：只要川普政府不改变达成协议的红线，只要北京不愿切实履行承诺，并通过与美国达成全面协议，走上结构性改革之路，那么美国加征关税就不可避免，中国经济继续下行也在所难免，受经济拖累的中共政权自然也丧失了其存在的所谓合法性，被中国人随时抛弃也不再是伪命题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:26 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653766.md#1" target="_blank">王丹：中共低估了香港人的勇气</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653766.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304192188-150x120.jpg" align ="left"></a>最近我跟朋友聊天，大家最关心的，还是香港目前的局势。我们这些曾经参与过八九民运的人，对香港都有一份特殊的情感，也可以叫“香港情结”。是这种情结，让我们从内心深处关心香港；也正是这种情结，让我们对香港人的群体特质，香港人的民心，有了更多更深的了解。基于这样的了解，我必须说，香港这次抗争运动能够发展到今天，在很大程度上讲.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 4:15 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11638056.md#1" target="_blank">“黑科技”治国激发美中科技战</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11638056.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-951304784-600x400-150x120.jpg" align ="left"></a>中共刚刚结束的四中全会，抛出了一个党文化新名词“中国之治”，自诩比肩中国历史上的盛世之治。不过，中共国进民退的“盛世”不但与国富民强的大唐盛世、康乾之治等截然相反；而且，它用“黑科技”打造的“中国之治”，也未能引来万国来朝，反而促使美国等民主国家纷纷采取反制行动，抵御中共对世界的威胁。中共向海外倾销的“科技专制”，正在.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 1:15 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11651244.md#1" target="_blank">静安：1949至今70年 慎重思考中共与中国</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11651244.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/130518194335815-150x120.jpg" align ="left"></a>看到今天的香港，警察可以随意抓路人、打死人算自杀，官员睁眼说瞎话，看似夸张的统治行径，其实早就在中国大陆行之有年。其实，20年前开始，在中国大陆的法轮功学员就是受到如此的对待，而且手段更加残酷，至今也未停息，精神迫害、活摘器官、强迫劳动、强暴.......罄竹难书，也已经被越来越多人所知晓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 10:54 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653084.md#1" target="_blank">魏京生：该做出正确的选择了</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653084.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/02/5022131181123-150x120.jpg" align ="left"></a>上世纪八十年代末和九十年代初，共产主义国家集团发生了巨大的变化，也使得全球的政治格局发生了巨大的变化。这个变化的发生，开始于七十年代末发生的民主墙运动。在北京的西单民主墙出现后不久，在莫斯科、华沙、台北等许多地方很快都出现了民主墙运动。这就是八十年代几乎波及全球的民主化浪潮的开始。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 10:37 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652970.md#1" target="_blank">陈思敏：香港学生在用生命告诉世界中共不可信</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304252188-600x400-2-150x120.jpg" align ="left"></a>香港科技大学二年级学生周梓乐11月4日在躲避警方催泪弹中坠楼，8日宣告不治，触发“反送中”民众于9日起持续发起了包括罢课、罢工、罢市“大三罢”等行动，要求还原周梓乐死亡事件真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 8:21 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652555.md#1" target="_blank">横河：美国因国家安全抗上抖音？?</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652555.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/henhe1-600x400-1-150x120.jpg" align ="left"></a>美国参议院听证抖音苹果缺席。网路公司危害美国国家安全的两种模式分别有何危害。在隐私和内容审查上，抖音和美国公司有何异同？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 7:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652281.md#1" target="_blank">程晓容：玻利维亚变天 给中共上了一课</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652281.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1177972249-150x120.jpg" align ="left"></a>玻利维亚政局的变动，昭示人民的重大胜利、专制政权的失败。在柏林墙倒塌30周年之际，在香港抗争不衰之时，莫拉莱斯认输，给了中共当头一棒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 5:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652454.md#1" target="_blank">梁京：香港危机失控的政治逻辑及其后果</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11652454.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d66ebaf153b01f_ttl7dayVxi_bg1-150x120.jpg" align ="left"></a>11月11日（周一）香港事态的严重恶化表明，香港危机已严重失控。香港危机失控最主要的标志其实并非市民抗争行动的不断升级，而是北京当局及其在香港的代理人越来越失去对警方行为和行动的控制，以至警察成为当前香港恢复基本秩序，走出政治困局最直接、同时也最难以逾越的障碍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 3:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11651763.md#1" target="_blank">王友群：齐心协力推倒中共这堵墙</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11651763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1181095710-600x400-2-150x120.jpg" align ="left"></a>1987年6月12日，美国总统里根在西柏林的勃兰登堡门前发表著名的“推倒这堵墙”的演说时，很多人都不相信。但是，2年后，柏林墙被推倒！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 3:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660421.md#1" target="_blank">朱同：共产党没有能力领导中国</a><br></h3>最近，中共“战果辉煌”，在国内、成功遏制住了二师兄，把事实通胀宣传成了“应该担忧通缩”；十三个“坚持和完善”成功发布；又砸了好多佛像（包括道教的）；双十一又卖了几千亿假货；历史上首次消灭了“黑死病”；落实了“爱党教育”，号召人民“坚持爱党爱国爱社会主义相统一，祖国的命运与党的命运密不可分”，要求人民在爱祖国母亲之前必须.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 5:50 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660419.md#1" target="_blank">金浴凤：香港</a><br></h3>流转金融港，干惹独裁狂；
+时有祸衅降，暗操傀儡戗；
+自由恨牙响，法治愁梦惶；
+惊起黑天鹅，旋风荡八荒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 5:23 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659860.md#1" target="_blank">海风：政府隐瞒疫情就是在犯罪</a><br></h3>据媒体报导，近几天在北京、甘肃、内蒙发现了多起鼠疫病例，而且已经有致死病例了，说明鼠疫在中国北方已经开始进入大规模爆发的前夕，一旦真正失控爆发，后果不堪设想。当年萨斯也是在北方开始爆发，然后南下，横扫中国，猪瘟基本也是这个路径。现在很多网友已经在网上描绘鼠疫进攻路线图了，说明民间对瘟疫之王——鼠疫的恐慌程度。然而，中共.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 1:12 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659706.md#1" target="_blank">祝君安: “爱国”的概念偷换</a><br></h3>党霸四方国何在？权贵盛宴一盘菜；
+土地或被汉奸卖，金钱撒向一路带；
+文化已由马教代，人民洗脑多奴才；
+剩下空壳成贼窝，五毛粉红之最爱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 1:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659287.md#1" target="_blank">李春草：醉花阴?红魔的最后疯狂</a><br></h3>
 
 为非作歹性难改
@@ -49,26 +60,5 @@
 共匪暴富缺仁义，美狮觉醒享德宇；
 狂徒胆敢毁珠玉，香江即尔葬身居。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657535.md#1" target="_blank">杨吒 ：谈共产党剥夺人们行善的权利</a><br></h3>大纪元网站纪元社论在2018年5至12月刊登了《魔鬼在统治着我们的世界》一文后，在世界范围内再次掀起了认识共党魔鬼本质的高潮，至今热浪未退。该书共28篇文章，在共党死命封网下，每篇文章点击量都在15000人次上下，好评如潮：恢宏大作，旁征博引，从历史事实透析共魔毁灭人类天机，洞察深远……高屋建瓴、非常之作、醍醐灌顶，指.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:09 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11655098.md#1" target="_blank">伍新： 鼠年未到鼠疫到</a><br></h3>鼠疫成对现北京，灾祸真的不单行。
-又说惊慌没必要，一切尽在掌控中。
-答问患者可否救，转院避谈去西东。
-四中全会弹老调，领导一切手不松。
-鼠疫也归党领导？领导首先领进京？
-进京似又暗转移，一切领导折打猛。
-当年萨斯瞒疫情，中共特色非典名。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 3:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11654891.md#1" target="_blank">吐为快：共匪在香港干什么？</a><br></h3>它们在证明——
-中共是言而无信的骗子
-是七十年无恶不作的流氓
-是明火执仗的土匪
-是毫无人性的豺狼虎豹
-是践踏人类文明的野蛮人
-是对抗普世价值的专制魔鬼
-是怀着砸乱世界初心和使命的暴徒
-是挑战正义和良知的邪教
-是制造矛盾和灾难的祸魁
-是自私自利的吸血鬼
-是鸡鸣狗盗的市井无赖
-是贪婪无理性的赌徒......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 3:23 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653743.md#1" target="_blank">夏林:《人民日报》的文章告诉了国人什么真相</a><br></h3>中共喉舌《人民日报》，在11月8日美国国务卿蓬佩奥发表对柏林墙倒塌30周年纪念讲话后，刊登了一篇署名“钟声”的文章，对蓬佩奥狠批了一番。文章一开头就到对蓬佩奥有三个不满：一个是“手里拎着一根意识形态大棒，恨不能走到哪里都耍一套污蔑、抹黑（中共）的把戏”；第二是“他一再肆意攻击中国政治制度，蓄意渲染所谓?‘中国威胁’”.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 2:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news392_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_10.htm">http://www.epochtimes.com/gb/news392_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
