--- a/gb/ncid2000_4.md
+++ b/gb/ncid2000_4.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/5/n8170284.md#1" target="_blank">忠厚之人 必有天佑！</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/5/n8170284.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/1607312315192483-150x120.jpg" align ="left"></a>崔崇屽心里受了委屈却无法自白，只有用一死来明志，可见他平生是一位很珍惜自己人格的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年8月15日 10:45 AM									</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/10/n8186284.md#1" target="_blank">私心狡诈 弄巧成拙！</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/10/n8186284.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/1512091350512483-150x120.jpg" align ="left"></a>“天道好还，无往不复。”怎能不信呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年8月12日 6:40 PM									</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/7/18/n8111774.md#1" target="_blank">酌古鉴今：鬼来讨债，骇人听闻！</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/7/18/n8111774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/07/1607151057452357-150x120.jpg" align ="left"></a>我原以为世人做恶事，最怕的是被人知道了。别人不知道的地方，就可以为所欲为了。今天我才明白，有人抱定世间无神鬼的这种论调，实在是靠不住的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年7月24日 5:51 AM									</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/7/17/n8108413.md#1" target="_blank">酌古鉴今：残酷整人遭奇报</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/16/7/17/n8108413.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/07/1607151057452357-150x120.jpg" align ="left"></a>长远的观点看问题，谁也别想占便宜，谁也占不到便宜；谁也别怕吃亏，谁也吃不到亏。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年7月21日 5:57 AM									</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/17/10/31/n9790883.md#1" target="_blank">他们起死回生后 自述游历地狱——5个著名的濒死体验案例</a><br></h3>许多从濒死状态归来的人都描述他们见到炫目的圣光，引领着他们飞跃此岸，有些甚至听到天使欢迎他们来到天国之门的歌声。然而，也有一些人的经历完全相反。他们回溯了去到地狱的情形……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年11月1日 7:24 AM									</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/17/9/17/n9639353.md#1" target="_blank">组图：参观博物馆 看到前世的自己</a><br></h3>德语中的doppelg?nger意指“分身”或“面貌极其相似的人”。在现实生活中，人们也许会见到非双胞胎却长得很像的陌生人，那就是doppelg?nger，先前有过这样的例子。但如果人们在博物馆或美术馆的作品中看到与自己长得很像的人，也许会怀疑，那是不是上辈子的自己！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年9月17日 2:12 PM									</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/17/7/21/n9449111.md#1" target="_blank">命运天定吗？(165)僧人转生27年梦见前生</a><br></h3>宋代人滕恺年二十七岁赴任前发了一梦，醒来感到这是一个不祥之兆。不久，在旅途中，他来到了梦中所见的“承天寺”，情节、人物和梦中所见完全符合。一个道士预告了他的死期就在三天后……。附篇八字实例分析：从格不成身弱极，不佳之造。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年9月9日 5:00 PM									</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/17/7/28/n9474139.md#1" target="_blank">印度山羊长人鼻震惊村民 人畜轮回异事奇闻</a><br></h3>印度一个村庄的村民们近日发现一只口鼻似人的奇怪动物，大惊失色。经讨论他们得出结论，这只动物其实是一只山羊！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年8月24日 1:57 PM									</td></tr>
