--- a/gb/ncid2420_6.md
+++ b/gb/ncid2420_6.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/29/n10261355.md#1" target="_blank">中共擅改行业规则 要黑客上交漏洞给安全部</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/29/n10261355.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/20160908_hacker-600x400-150x120.jpg" align ="left"></a>英国《金融时报》近日报导说，中共要求本国黑客缺席全球黑客大赛。一年一度的Pwn2Own黑客大赛上过去基本上全是中国人，他们囊括了所有竞赛大奖，但今年几乎没有中国人参赛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年03月30日 1:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/10/n10206737.md#1" target="_blank">网文：关于“房地产税” 八问财政部副部长</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/10/n10206737.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/01/1001041002291497-150x120.jpg" align ="left"></a>3月8日，浙江省著名房产研究和评论专家，现任浙报传媒地产研究院院长丁建刚，就中共要推出的房地产税问题发文质问中共财政部副部长史耀斌。丁建刚质疑史耀斌偷换概念，忽悠民众。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年03月10日 9:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/3/n10187675.md#1" target="_blank">网文：楼价下跌近70%仍无人问津 华北成重灾区</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/3/n10187675.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/05/1110142229442431-150x120.jpg" align ="left"></a>大陆楼市经过去年一年的调控期之后，部分地区楼价大幅下跌。由于北京是楼市调控最严厉的城市，带动周边楼市也出现楼价和成交量下行，有的地方甚至单价从40,000元/平米降至13,000元/平米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年03月03日 7:21 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/2/26/n10175025.md#1" target="_blank">中共废除连任限制 大批帖子快速遭删</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/2/26/n10175025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/GettyImages-79146134-150x120.jpg" align ="left"></a>中共当局在2月25日提议取消国家主席最多任期两届的限制后，引发网民热议。中共当局对网络展开审查，封销大批账户及用词，例如“不同意”、“移民”等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年02月27日 8:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/9/9/n10700943.md#1" target="_blank">网文：中共发行巨额地方债搞基建等同P2P</a><br></h3>中共当局近来加速了地方债的发行速度，有消息显示今年要发行地方债已达3万亿元人民币。有大陆经济界人士表示，中共用这些融资搞基建不产生价值，不产生收入，将来就和目前的P2P一样借新还旧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年09月09日 8:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/9/4/n10688808.md#1" target="_blank">投书：我是中共极多次疯狂暗杀的幸存者</a><br></h3>我是中共极多次疯狂暗杀的幸存者；我有确实证据，证明中共对我的暗杀！ 我姓名：肖冰；身份号：210303195606252315。 2013年3月13日之前在辽宁省鞍山市居住，现居住泰国曼谷，曾在鞍山日报社工作，2002年退休。我的同学、同事、邻居、亲朋大都在鞍山市。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年09月04日 1:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/7/22/n10580894.md#1" target="_blank">网文：大陆房地产税缘何突然提速？</a><br></h3>近来，中共要推出房地产税的声音再次引发民众关注，大陆业界此次表示中共这次是真的要急着推出房地产税，因为，中共没钱了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年07月22日 3:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/19/n10229202.md#1" target="_blank">网文： 陆企业销售200万最后到手仅2.14万</a><br></h3>大陆从事制造业不如炒房。有有文章日前揭示如果开一家工厂，年销售额200万元（人民币，下同），最后到手只有2.14万元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2018年03月19日 12:30 PM							</td></tr>
