--- a/gb/ncid277_8.md
+++ b/gb/ncid277_8.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687490.md#1" target="_blank">薄熙来二姐病亡 薄家父子丑闻再受关注</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687490.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/09201ebd6fb8497900773bdc6cb1ff6c-150x120.jpg" align ="left"></a>中共元老薄一波的二女儿薄洁莹病亡后，薄家父子的淫乱、残暴等丑闻再次成为外界关注的焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 6:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687982.md#1" target="_blank">“坏消息”接踵而至 中共当局焦头烂额</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>2019年，中共正面临着前所未有的乱局。对中共当局而言，可谓坏消息不断，让其焦头烂额。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688102.md#1" target="_blank">美国立法保护香港 中美决战在港拉开序幕</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11688102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-28_21-27-10-150x120.jpg" align ="left"></a>11月27日美国颁布了《香港人权与民主法案》，意义十分重大。加上大陆特工王立强惊人爆料，证实中共利用超限战手法渗透控制香港和台湾。美国的立法，为中美在香港的较量拉开序幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687880.md#1" target="_blank">川普签香港人权法案 舒默促总统认真执行</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687880.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/2fd92e52ac2626fd7f1ca0370823598b-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周三（11月27日）签署了《香港人权与民主法案》和《禁止向香港出口防暴装备法案》，众多美议员发表推文表示感谢。参议院少数党领袖舒默督促川普积极执行法案，并表示美国承受不起对中共软弱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687919.md#1" target="_blank">一文看懂 香港人权与民主法案是哪国内政</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687919.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1MN1JJ-150x120.jpg" align ="left"></a>感恩节前一天，美国总统川普（特朗普）签署《香港人权与民主法案》，以表达对香港抗议者的支持。这项法律正式生效使得中共在跳脚的同时，也深感恐惧。中共再次重复美国通过该项法案是干涉中国内政，那么从该法案的历史溯源到今年的立法过程看，《香港人权与民主法案》到底是哪国的内政呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:24 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687869.md#1" target="_blank">【热点互动】川普签香港法案 贸易协议还签？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db602cd78fca64_ttl7daykzf_86c475e41a499-150x120.jpg" align ="left"></a> 川普总统签署，《香港人权法案》成为法律！贸易协议还签吗？抖音微信涉内容审查，或成美下一个监管目标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 3:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687692.md#1" target="_blank">英国侦探声援郑文杰 深度剖析案件矛盾处</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/Simon_Cheung1@1200x1200-150x120.jpeg" align ="left"></a>英国驻香港总领馆前雇员郑文杰（Simon Cheng）向英国通讯管理局（Ofcom）控告，因为中共央视海外电视CGTN了播放他被迫认罪的录像。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687493.md#1" target="_blank">香港区选跨出民主第一步 红二代：中共怕选票</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687493.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911270654462188-150x120.jpg" align ="left"></a>香港区选落幕后，各方观察北京当局将有何动态。一位不具名的红二代向大纪元表示，对中共来说，这次选举结果肯定是有冲击，因为它最怕选的是选票，而且从它应对香港问题和美中关系两大问题来看，中共没有任何自信也没把握。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687348.md#1" target="_blank">川普签香港人权法案 港人振奋北京恼怒</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20180323-Trump-SamiraBouaou-8329-2-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周三（11月27日）签署了《香港人权与民主法案》和《禁止向香港出口防暴装备法案》，这一消息令香港寻求民主的抗议者们为之振奋，却令北京火冒三丈，谴责美国的举动是“赤裸裸的霸权行为”，并紧急召见美驻华大使表示抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 10:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687036.md#1" target="_blank">王立强宣誓作证后 中国创新关闭多家子公司</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191127PHO0018l-600x400-1-150x120.jpg" align ="left"></a>被指中共高级特务的向心，其掌控的香港中国创新投资公司（下称中国创新）近日陷入舆论漩涡。有消息说，这家公司已在3周前悄悄关闭其旗下多家子公司的营运，但未通报香港证交所。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 10:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11685995.md#1" target="_blank">【十字路口】王立强案3大看点 中共面临大动荡</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11685995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db5621a1f5ae4c_ttl7dayjLj_20191128-____-___-150x120.jpg" align ="left"></a>王立强叛逃，让中共面临大动荡？台湾总统大选谁将溃败？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 9:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11685941.md#1" target="_blank">【翻墙必看】分析：曾庆红是香港黑老大</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11685941.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/zeng-qinghong-GettyImages-52323795-1-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 9:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank">程晓容：王立强案重挫中共 四大重点解读</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/505fa504a8ce10df481ea24386519d34-150x120.jpg" align ="left"></a>王立强的指证将中共的海外渗透网撕开了一个大洞，中共职业和外围特工在亚太区域的活动将受到更有针对性的调查和打击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686784.md#1" target="_blank">男子上海地铁内高呼“光复香港” 网民热议</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686784.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/HK-1-150x120.jpg" align ="left"></a>网上一段视频显示，一名男子在上海地铁内用广东话高呼“光复香港”等支持香港的口号，引起众人侧目，他们似乎对这名男子的举动感到惊讶，而网民也对此议论纷纷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 4:51 PM							</td></tr>
@@ -21,23 +32,6 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685386.md#1" target="_blank">旅美法学家警告：搞垮香港 中共也要进入末日</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685386.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1906162243372378-150x120.jpg" align ="left"></a>香港高等法院11月18日裁决港府颁布的《禁蒙面法》违背《香港基本法》。中国（中共）全国人大法工委立即发表声明称“香港特别行政区法律是否符合香港基本法，只能由全国人大常委会作出判断和决定。”就此，旅美法学家程干远指出，这意味着全国人大又要对香港释法，而任意释法，将破坏香港的司法独立，从而破坏香港的“一国两制”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685175.md#1" target="_blank">王立强指证共谍案 蔡英文：严肃国安事件</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685175.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/4e3c7cbc4e53adeb2647da7b9e7d84e8-150x120.jpg" align ="left"></a>针对“王立强”投诚澳洲指控香港“中国创新”投资公司主席向心夫妇是中共间谍案，中华民国总统蔡英文11月27日表示，此案是严肃的国安事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684920.md#1" target="_blank">巴拿马前总统疑收中共1.4亿美元 与台湾断交</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684920.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/Panama3-for-Selling-764-and-BW-594-150x120.jpeg" align ="left"></a>外国媒体揭露，在2017年宣布与台湾断交的时任巴拿马总统瓦雷拉（Juan Carlos Varela），疑似收受中国密款1.43亿美元以换取中巴建交。对此，中华民国外交部发言人欧江安27日表示，中共夸大诱使政客，遂行挖台邦交目的后，就不落实给对方的承诺，对此消息浮上台面，外交部“不意外”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 2:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684798.md#1" target="_blank">台北检证实向心购不动产 二度约谈2小时</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684798.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191125PHO0204l-150x120.jpg" align ="left"></a>中国创新投资公司负责人向心及其妻子龚青，被中共间谍王立强揭露间谍身份后，检调单位在桃园机场拦截2人；经台北地检复讯后谕令限制出海、出境，但却遭媒体质疑没有管辖权，对此，北检强调，涉嫌违反《国安法》，且2人购置的不动产也在辖区内，北检确有管辖权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:02 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684457.md#1" target="_blank">旅英港人再多城游行 促英政府捍卫香港自由</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684457.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-41-150x120.jpg" align ="left"></a>11月23日，英国多个城市再次同步发起声援香港的集会游行活动，参与城市包括伦敦、伯明翰、曼城、布里斯托及爱丁堡等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 7:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684437.md#1" target="_blank">川普是否会签香港法案？蓬佩奥这样说</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684437.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/0cad277f9c5032736334e345654c90e4-150x120.jpg" align ="left"></a>周二（11月26日）美国国务卿蓬佩奥（Mike Pompeo）表示，美国的人权标准世界各地都适用，香港也不例外，美方坚定希望中共履行其对香港承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 5:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684285.md#1" target="_blank">张家口公安高官获刑22年 曾迫害法轮功</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/wangsc2-Web-Banner-1200x800-v3-1-150x120.jpg" align ="left"></a>11月27日，中共河北张家口市公安局前党委委员、副局长王守成，因受贿、贪污、滥用职权、巨额财产来源不明罪，被判处有期徒刑22年，罚款250万元人民币（下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 4:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682689.md#1" target="_blank">程晓容：“止暴制乱”—中共的洗脑谎言</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191027221639100615-150x120.jpg" align ="left"></a>中共在香港集中上演了种种暴力，因为暴力是中共的一大遗传基因，中共的执政史就是一部杀人史。所以，它宣扬的“止暴”，是倒打一耙的流氓笑话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683560.md#1" target="_blank">中共官媒同一天报导杨洁篪和刘鹤举动 引猜测</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683560.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003091000202327-150x120.jpg" align ="left"></a>11月26日，中央政治局委员杨洁篪接受新华社访问，高调批评《香港人权与民主法案》，而同一天，官媒报导副总理刘鹤与美国贸易代表莱特希泽等通电话。北京同时就两个议题表态，或想利用贸易协议，逼迫美国总统川普（特朗普）否决法案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 1:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683727.md#1" target="_blank">中共驻港军营加装新型监控系统 监视各大学</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683727.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911170742222188-600x400-1-150x120.jpg" align ="left"></a>在反修例抗争中，香港多间大学成了抗争战场。有港媒报导，中共解放军驻港军营加装新型闭路电视监控系统，对附近多家学校进行全方位的监视。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682907.md#1" target="_blank">中共官媒为何误判港区选会赢？还提前备稿</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682907.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911232049052188-150x120.jpg" align ="left"></a>因误判香港区议会选举结果，中共多家国家级媒体当日被迫慌忙中换稿。因中南海的情报持续偏执、都是领导想要听的内容，而任何负面消息都可能被定性为“不忠诚”，更恐搭上个人前程，中共媒体对香港选举是选择性集体失明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682438.md#1" target="_blank">台商登报向习近平喊话 控诉周永康人马打压</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682438.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/3a1a4fd0d0634a17f28b78d9ec6d8a6b-150x120.jpg" align ="left"></a>前电电公会（电机电子工业同业公会）理事长吴思钟，26日于《联合报》刊登半版广告，揭露自己被中共高官贪腐欺压过程，并喊话习近平关注此案。他大批周永康势力还盘根错节在最高法院系统，要习近平处理此案，不要失信于台湾人民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 8:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682489.md#1" target="_blank">内幕：习近平误判香港选情的两大原因</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682489.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911242036112188-600x400-2-150x120.jpg" align ="left"></a>在历时逾5个月的反送中强大民意的席卷下，亲共的建制派在香港区议会选举中几乎全面崩盘，泛民主派大胜。报道指，此结果令北京高层震惊，没想到会如此惨败。从各种迹象显示，习近平误判了香港局势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 8:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686517.md#1" target="_blank">山东高法前审判员刘元成受审</a><br></h3>11月28日上午，中共山东省高级法院前副厅级审判员刘元成在山东烟台受审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 2:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683842.md#1" target="_blank">【翻墙必看】剖析2019年中共所出昏招</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
-
-1.洪微：2019中共满盘皆输
-2019年风云变幻，时光飞快，所剩的一个月，或许还有大事发生。在2019年里，中共陷入了前所未有的内外交困，面对种种问题，毫无解决之道，只能不断掩盖、拖延，一旦出招，必是昏招。如果把2019年当作一盘棋，中共已经满盘皆输。
-
-2.周晓辉：川普爆北京秘密 北京沉默以对
-美国当地.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 9:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_7.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;8&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_9.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid277_8.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277_8.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid277_8.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_8.htm">http://www.epochtimes.com/gb/ncid277_8.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
