--- a/gb/ncid278_7.md
+++ b/gb/ncid278_7.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669504.md#1" target="_blank">港府称催泪弹成分不宜公开 被疑故意隐暪真相</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911180456501501-150x120.jpg" align ="left"></a>在周三（20日）的立法会大会上，香港食物及卫生局局长陈肇始回应议员质询时称，“没有发现催泪烟引致二噁英中毒的情况”。陈又称当局不适宜公开催泪烟成分，并强调“警方保证催泪弹安全”。但有医生指出，二噁英可在人体中潜伏一段时间才发病，呼吁政府尽快公开催泪弹成分，以保障公众健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 4:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669435.md#1" target="_blank">中共雇凶火烧香港大纪元印刷厂 引各界谴责</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669435.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/fire-top-600x400-1-150x120.jpg" align ="left"></a>香港时间周二（11月19日）凌晨，承印香港《大纪元时报》的印刷厂遭中共雇凶纵火，导致部分印刷设备与当日报纸受损。此事件引发各界人士关注。有美国国会众议员在推特上说，大纪元因站出来支持香港抗议、反对中共而在海外受到迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 3:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669330.md#1" target="_blank">警惕共产扩张 爱德华兹：香港抗争警示全球</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/Screen-Shot-2018-11-21-at-7.52.44-PM-150x120.png" align ="left"></a>美国共产主义受难者基金会主席李?爱德华兹（Lee Edwards）呼吁全球应警惕共产主义的扩张，他表示香港民众抗争中共暴力也是在向世界发出“警示”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669368.md#1" target="_blank">香港法案过关 陆自由派打擦边球庆贺：喝两杯</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/191014205020100615-150x120.jpg" align ="left"></a>美国参议院周二（19日）下午无异议通过了《香港人权与民主法案》，中共方面强烈反弹，多个官方机构“一致”抗议，并严厉管控舆论，但国内的自由派人士则大打擦边球庆祝，“中午给自己加一个菜！”“今天喝两杯！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669237.md#1" target="_blank">【十字路口】港警狂攻中大理大 区选举有变？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d8e68a412e2e14_ttl7dayz9v_15d8e037030fecf4_ttl7dayne8_20191120-____-___-150x120.jpg" align ="left"></a>为什么香港警方要把大学作为攻击重点？躲在幕后的中共究竟在玩什么把戏？我认为，主要有七个理由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669248.md#1" target="_blank">英文报告“法轮功在中国被迫害20年”将发行</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669248.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-20-sample_pages2-1_page_01-ss-150x120.jpg" align ="left"></a>英文新书《明慧报告：法轮功在中国大陆被迫害二十年》即将发行，现已开始接受预订。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 11:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669141.md#1" target="_blank">香港人权法获美参院通过 一文看懂有何影响</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669141.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1003182344381160-150x120.jpg" align ="left"></a>美国国会参议院周二（11月19日）无异议通过《香港人权与民主法案》，令港人感动，令北京愤怒。中共多个部门的强烈反应，引发外界关注该法案究竟会带来哪些影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 11:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666088.md#1" target="_blank">9月底 武汉40名法轮功学员遭警察突击绑架</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666088.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-67-600x370-150x120.jpg" align ="left"></a>9月23日上午，以武汉市东西湖区舵落口大市场派出所为主的一百多个警察，在该大市场内，按监控录像照片，绑架了40名法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:04 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668823.md#1" target="_blank">香港警队新一哥上场 即出现“黑衣暴徒”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668823.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a3-1@1200x1200-150x120.jpg" align ="left"></a>香港警务处处长卢伟聪卸任后，“警队一哥”昨交棒至属鹰派人物的原警队二哥邓炳强。邓炳强被指和黑社会关系密切，他上场首日，承印《大纪元时报》的印刷厂即遭纵火，同时，支联会主席何俊仁遇袭。两单袭击案的歹徒都是蒙面的黑衣人，有分析认为，这是中共想要嫁祸勇武派，同时想要令大纪元和支联会灭声。但香港大纪元强调，他们决不放弃报道真相。而何俊仁也表示，绝不畏惧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668499.md#1" target="_blank">美参议院通过香港法 中共跳脚6部门发声</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668499.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1003211949511160-600x400-150x120.jpg" align ="left"></a>11月19日（星期二）傍晚，全球瞩目的《香港人权与民主法案》在美国参议院全体通过，此举令中共十分恼怒，立刻发出“强烈抗议”，甚至召见美国使馆官员，要求美方阻止该案成法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 5:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668171.md#1" target="_blank">医疗事故20年上访未果 受害人欲以死抗争</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668171.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg" align ="left"></a>上海女访民徐佩玲，因医疗事故造成身体三级伤残，生命已到尽头。二十多年来上访无果，被逼得走投无路，曾两次自焚抗议。上海市卫计委仍故意推托，不给合理赔偿。近日，徐佩玲再次撰文要求按法律规定进行合理赔偿，宁死也要捍御自己的合法权利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668101.md#1" target="_blank">控公安行政强制 江苏访民被警方非法绑架</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668101.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-32-150x120.jpg" align ="left"></a>江苏张家港市访民陶红，控诉“公安行政强制”案上周在昆山法院开庭。庭审结束后她和二位好友步出法院门口，随即被属地警察和范庄社区干部围住欲强行带走。报警后被警方以谎报警情带往派出所作笔录，并借机将陶红交给张家港警察。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 3:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661540.md#1" target="_blank">九评问世15载 3亿4千万民众抛弃中共</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661540.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/9P@1200x1200-150x120.jpg" align ="left"></a>15年前，2004年11月19日，大纪元发表了《九评共产党》系列社论，第一次全面、深刻地揭示了中共的邪恶本性，在中国乃至在全球华人圈掀起了波澜壮阔的“三退”（退出中共党、团、队组织）大潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 3:00 PM							</td></tr>
@@ -20,16 +30,6 @@
 
 专家论坛由澳洲人权律师协会事务与人权小组委员会的联合主席、国际人权律师布里奇特（Madeleine Bridget.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 11:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664532.md#1" target="_blank">广东省公安厅长李春生被民众举报到海外</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664532.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-160-800x450-1-150x120.jpg" align ="left"></a>近期，大陆民众响应海外明慧网有关收集迫害者名单的《通告》，将广东省公安厅厅长李春生的恶行举报到海外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 7:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666042.md#1" target="_blank">港人请求英国援助 寒风中首相府外静坐</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666042.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/IMG_6398-150x120.jpg" align ="left"></a>11月18日晚上，数百名居英港人在伦敦进行了一连串抗议中共及香港政府的活动，来声援香港抗争者、声讨过去数天警察包围香港各大学府，并武力镇压中文大学和理大学生的暴行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 6:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666009.md#1" target="_blank">日本大学生香港被捕 日本官房长表态</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo6237501500297423143-1-150x120.jpg" align ="left"></a>上周日（17日），一名日本大学生在香港大学生和港警冲突的理工大学附近被捕，据悉21岁的井田光是日本东京农业大学三年级学生，日本驻港总领事馆已经对他进行了帮助。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 6:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661113.md#1" target="_blank">北京法轮功学员程小富被河北女监迫害致疯</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661113.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2018-10-16-minghui-kuxing-daliao-1-150x120.jpg" align ="left"></a>北京顺义区法轮功学员程小富于2018年4月16日被绑架，同年9月29日被非法庭审，遭诬判2年；2019年8月30日，被由北京女子矫治中心转至河北女子监狱。近日，家人见到她神情呆滞、不认人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 3:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664673.md#1" target="_blank">香港暴力升级谁负责？英美媒体意见一致</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664673.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-17_12-55-03-150x120.jpg" align ="left"></a>香港近日经历了反送中游行以来的最黑暗日子，大学成为了冲突的新战场。英国《卫报》发表社论称，港府暴力对待抗议者，对民众声音充耳不闻，导致了今天这样一个危险局势。而美媒《华盛顿邮报》也发表了类似评论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11664939.md#1" target="_blank">香港各界营救被困理大校园学生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11664939.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911180523231501-150x120.jpg" align ="left"></a>警方连续两日包围理工大学校园，理大学生会表示校园内至少有500至600人被困，相信有六至七成人属理大学生，校内学生由凌晨开始多数想离开，唯被警方以武力阻止。民间发起集会等方式声援被困学生，各界亦以不同方式希望营救被困学生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 9:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664166.md#1" target="_blank">波兰前总统：希望港人的抗争取得成功</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664166.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1cb1dd236d0405d0439edb154ebe5151-e1574131909531-150x120.jpg" align ="left"></a>面对香港当前的紧张局势，经历东欧共产极权覆灭的波兰前总统莱赫?瓦文萨（Lech Walesa）向抗争中的香港人送去祝福，他建议香港人应争取西方社会更广泛的支持，希望港人的抗争取得成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 8:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661562.md#1" target="_blank">忧香港局势 美众议员：中共没有自由基因</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/11-13-Congresswoman-Marcy-Kaptur-speech-150x120.jpg" align ="left"></a>2019年11月13日，在美国首都华盛顿DC，卡普特表示，对于现时越来越紧急的香港时局，他感到非常的担心。他在1997年对香港的担忧真的就出现了。“正如我所说， 当年我看到中共的直升飞机降落时， 对我而言， 那是一个非常不吉祥的时刻。”他说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 7:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661615.md#1" target="_blank">魏京生：从香港抗争看自由与觉醒</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1605262341581160-600x400-150x120.jpg" align ="left"></a>“共产党现在最怕的就是，如果香港成功了，大陆老百姓也会一哄而起，那时候共产党就扛不住了。”魏京生说。日前，这位旅居美国的中国著名民主人士认为，香港人通过抗争自由而唤醒人们认清中共暴政。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 7:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664632.md#1" target="_blank">政府无道 公民抗命 香港抗争如浴火凤凰</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664632.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo6237501500297423137-1-150x120.jpg" align ="left"></a>香港理工大学经过一整夜中共港警炮火猛攻，校园一带多次火光冲天。18日，抗争者拚死守护住校园，面对全副武装的港警，情势几度告急。而日前，在抗争最艰难时刻，香港多区可见巨形“凤凰云”，在夕阳的映照下犹如浴火凤凰。众多港人表示，坚信“香港守护神”在看护香港，香港现在抗争的过程犹如火凤凰浴火重生，坚持下去，荣光一定归香港。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 6:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665899.md#1" target="_blank">中共屡侵人权 澳洲停止一项20年之久的项目</a><br></h3>澳洲跟中共的关系不断交恶，随着两名澳洲议员签证被拒、中共迫害大量维吾尔人事件爆光、在香港暴力镇压民主运动等，澳洲宣布结束了跟中共的“人权伙伴关系”，废除了一项实施了20年之久的人权项目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:35 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11664903.md#1" target="_blank">众院外交委员会主席：美有道义为港人疾呼</a><br></h3>近日，美国众议院外交委员会主席艾里奥特?恩格尔（Eliot Engel）表示，他支持香港民众为民主和自由的抗争，希望香港政府确保“一国两制”的实施 。同时他还表示，美国参议院应尽快批准香港人权法案，美国政府有道义和义务去为香港人大声疾呼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 8:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668954.md#1" target="_blank">香港人权法火速通过 台立委：美国高度关切</a><br></h3>美国参议院于美东时间19日全院无异议通过《香港人权与民主法案》，同时也禁止美国产催泪弹等武器销往香港。民进党立委王定宇表示，香港警察的执法已经超过合理范围，这种暴力镇压方式，让全球民主国家都看不下去，也让美国参议院加速立法进程，而法案处理的速度，也代表美国对香港的关切程度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 11:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid278_7.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_7.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid278_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_7.htm">http://www.epochtimes.com/gb/ncid278_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
