--- a/gb/ncid283_10.md
+++ b/gb/ncid283_10.md
@@ -1,4 +1,21 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国经济</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11640882.md#1" target="_blank">FBI局长：中共派人冒充大学生和学者窃密</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11640882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-813266746-150x120.jpg" align ="left"></a>美国联邦调查局本周表示，新的网络和数字方面国家安全威胁不仅来自恐怖分子，还有来自中共的知识产权和商业机密的盗窃行为，导致美国对中共的反情报活动呈“上升趋势”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 1:56 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640663.md#1" target="_blank">大陆债务违约高发或成明年“黑天鹅”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/b70abe5db6acb042f162cebe98c4fd5b-150x120.jpg" align ="left"></a>截至10月份，大陆今年债务违约数量和金额已经超过去年全年，有业界人士表示，明年债务违约有可能成为大陆经济界的黑天鹅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 12:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11638750.md#1" target="_blank">没钱了？中共试行公司取款50万登记制度</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11638750.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/b70abe5db6acb042f162cebe98c4fd5b-150x120.jpg" align ="left"></a>中共央行日前发布在河北、浙江及深圳三地取款登记制度，规定公司取款50万（人民币，下同），个人取款不同地区10万至30万不同起点时必须予以登记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 11:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640492.md#1" target="_blank">美中专家唇枪舌战 林毅夫打巨额赌资遭质疑</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640492.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/5ff13c2c10dc989e792b9647c500b5ea-150x120.jpg" align ="left"></a>美中贸易战不仅扩展到科技、金融等领域，而且双方学者也爆发口水战：哈佛大著名学者尼尔·弗格森（Niall Ferguson）与北京大学教授林毅夫就双方贸易、关税、知识产权等方面展开激烈地辩论，林毅夫最后提出打200万美元赌，被美国专家质疑：你怎么赚得这么多钱？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 9:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640515.md#1" target="_blank">中共窃知识产权 议员促川普采取更强硬立场</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640515.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/GettyImages-936574146-600x400-1-150x120.jpg" align ="left"></a>美中贸易战历时一年多，中共盗取美国知识产权一直是贸易谈判的主要议题之一。周四（11月7日），两名共和党议员敦促川普（特朗普）政府对中共窃取知识产权行为采取更加强硬立场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 6:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640298.md#1" target="_blank">中小银行挤兑潮频现 中共金融委急商对策</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640298.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Unknown-14-600x400-150x120.jpg" align ="left"></a>大陆中小银行爆雷潮风雨欲来。11月6日，中共国务院金融委召开第九次会议，再次聚焦中小银行金融风险。有消息称，当局正在讨论对潜在风险的中心银行进行“合并或重组”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 4:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11639748.md#1" target="_blank">挹注重资打造半导体产业 中国能跟上主流？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11639748.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-72340449-150x120.jpg" align ="left"></a>中共当局针对加速半导体产业发展所成立的“大基金”，10月22日注册“国家集成电路产业投资二期股份公司”，注册资本为2041.5亿元。加上2014年一期筹集的1387亿元，两轮融资筹集了510亿美元。但是，靠挹注资金就能弥补差距吗？目前，中国最具代表性的晶圆厂中芯国际，与世界主流工艺相差两代技术，市场份额、营收水平则与业界龙头台积电差距在10倍以上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 2:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11639300.md#1" target="_blank">继王思聪后 潘石屹儿子潘瑞清空微博</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11639300.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/44-150x120.jpg" align ="left"></a>继万达董事长王健林儿子王思聪清空微博后，大陆地产大亨、SOHO中国负责人潘石屹的大儿子潘瑞也清空了微博。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 6:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11639295.md#1" target="_blank">美国9月关税收入70亿美元 创纪录</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11639295.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1145130342-150x120.jpg" align ="left"></a>最新数据显示，随着美国对来自中国的服装、工具、电子产品和其它消费品开始征税，美国9月份的进口关税创纪录，高达70亿美元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 6:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11638596.md#1" target="_blank">中共央行降低MLF利率 分析：释货币宽松信号</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11638596.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/20190520-biyun-hk001-150x120.jpg" align ="left"></a>中共央行11月5日发布公告称，当日央行开展中期借贷便利（MLF）操作4000亿元（人民币，下同），期限为1年，中标利率为3.25%，较上期下降5个基点。央行降低中标利率出乎市场预期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 1:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11638214.md#1" target="_blank">美议员提法案 阻联邦退休基金投资中国股票</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11638214.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/190626154132100699-150x120.jpg" align ="left"></a>多位美国联邦议员周三（11月6日）提出法案，旨在阻止联邦退休基金投资中国股票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 5:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637987.md#1" target="_blank">美中第一阶段协议或延至12月 在欧洲签</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/GettyImages-871942424-600x400-1-150x120.jpg" align ="left"></a>川普（特朗普）政府高级官员周三（11月6日）告诉路透社，美国总统川普与中国国家主席习近平签署第一阶段贸易协议的会议可能会推迟至12月，有关协议条款和川习会地点的讨论仍在继续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 4:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637871.md#1" target="_blank">辽宁营口沿海银行发生挤兑 海航是最大股东</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637871.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Untitled-4-150x120.jpg" align ="left"></a>继洛阳伊川农商银行出现挤兑取钱现象仅一周，辽宁省营口市沿海银行也发生大批储户前往银行取钱的挤兑风波。当地警方和政府紧急发声明“辟谣”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 2:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637891.md#1" target="_blank">加前大使：中共猪肉战储已耗尽 疫情超严重</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637891.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1909091340312436-150x120.jpg" align ="left"></a>本周三，中国宣布恢复从加拿大进口猪肉和牛肉。加拿大前驻华大使赵朴（Guy Saint-Jacques）表示，中国的猪肉战略储备已经耗尽，将来10年猪肉的供应都难以正常。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 1:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637732.md#1" target="_blank">大陆天然气价一个月暴涨近五成 惹民怨</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11637732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1000660258-150x120.jpg" align ="left"></a>自从两年前中共一刀切在大陆实施禁煤令后，天然气价格就不断上涨，最近在短短一个月更暴涨了近五成，还一度出现单日每吨上涨近千元（人民币，下同），令百姓怨气冲天。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月07日 1:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11636248.md#1" target="_blank">爱荷华州还是希腊？协议签署地成川习会议题</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/6/n11636248.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1067254410-2-600x400-150x120.jpg" align ="left"></a>美中贸易官员正在为达成第一阶段贸易协议而努力，希望在11月能让双方首脑签署。而签署协议的地点也成为美中谈判新议题和各界关注焦点，目前呼声最高的是美国爱荷华州、阿拉斯加、夏威夷，以及希腊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 12:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11636094.md#1" target="_blank">大陆10月土地供需齐跌 卖地收入减26%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11636094.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/03/1405201308251944-150x120.jpg" align ="left"></a>最新的数据显示，大陆10月份城市土地供应和需求双双下降，成交额也环比减少了26%。其中三四线城市土地流拍率走高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 9:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11636082.md#1" target="_blank">曾筹划赴美上市 500亿规模网贷平台爆雷</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11636082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/1604140336031758-e1499480241869-600x399-150x120.jpg" align ="left"></a>大陆泰然金融平台实控人潘某某11月1日下午投案，交代了其实际控制的浙江小泰科技有限公司涉嫌非法吸收公众存款的情况。该平台涉及资金539.8亿元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 9:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11635873.md#1" target="_blank">特鲁多：加拿大猪牛肉将恢复出口中国</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11635873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_144558203-150x120.jpg" align ="left"></a>加拿大总理特鲁多周二（11月5日）宣布，中国将再次开始进口加拿大猪肉和牛肉。今年6月份，中国暂时中止对加拿大的猪肉进口，导致加拿大与中国之间的紧张关系再度升级。而在中国，暴发非洲猪瘟的这一年之中，每斤猪肉的价钱上涨了46.7%，肉价飞涨已经成为中共当局面临的重大危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 4:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11635583.md#1" target="_blank">大陆蒜价同比上涨近200% 创三年新高</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11635583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/garlic-0828-150x120.jpg" align ="left"></a>大陆不仅猪肉、鸡蛋、水果的价格一路飙升得令人忧心，“蒜你狠”似乎卷土重来。因今年大蒜种植面积减少，致蒜价暴涨，分析人士说，未来仍存上涨空间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 1:29 AM							</td></tr>
@@ -11,23 +28,6 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11633976.md#1" target="_blank">大陆投行：大陆明年GDP增幅降至5.9%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11633976.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/GettyImages-492909833@1200x1200-150x120.jpg" align ="left"></a>中国大型投行中金公司最新报告显示，大陆内需增长仍然面临压力，预计明年实际GDP增速可能从今年的6.1%降至5.9%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 2:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11633615.md#1" target="_blank">中共大规模窃美医学成果 FBI调查180案</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11633615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/NIH_Clinical_Research_Center_aerial-600x400-150x120.jpg" align ="left"></a>美国联邦调查局（FBI）和国立卫生研究院（NIH）正在展开一项大规模调查，涉及到71家美国研究机构（其中包括很多知名医学院），180个可能涉及知识产权盗窃的个案。几乎所有这些案件都和华裔有关，有些人已经加入美国籍，他们被指为中共进行盗窃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 1:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633297.md#1" target="_blank">一文看懂 抖音海外版被美国盯上的来龙去脉</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633297.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/364136-150x120.jpg" align ="left"></a>短视频共享应用程序抖音（TikTok）已成为被美国监管部门盯上的最新一家中国公司，川普政府对涉及否因的一起10亿美元收购案展开国家安全审查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 12:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11632991.md#1" target="_blank">跨界卖房自救 大陆汽车业进入洗牌期</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11632991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-645812246-150x120.jpg" align ="left"></a>大陆经济下行带动汽车业市场下滑，车企通过卖房、卖资产求得生存，在寒冬中不能存活下来的车企将被兼并或倒闭，汽车业将进入洗牌期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 11:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633450.md#1" target="_blank">川普政府正式启动退出巴黎气候协议程序</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633450.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-691273986-150x120.jpg" align ="left"></a>美国国务卿迈克?蓬佩奥（Mike Pompeo）周一（11月4日）证实，川普（特朗普）政府已正式通知联合国，美国将退出《巴黎协定》。退出巴黎气候协议需一年时间，这是这个过程的第一步。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 7:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633276.md#1" target="_blank">“活下去”难？万科员工基本底薪下降40%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633276.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512220439332039-150x120.jpg" align ="left"></a>受大陆房地产市场下行的影响，房企巨头万科近日开始了新一轮职级架构调整。目前该职级调整在万科各个区域落地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 5:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633067.md#1" target="_blank">王岐山老同事斥公权太任性 民企都过得不好</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11633067.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/cai-150x120.jpg" align ="left"></a>大陆国进民退不断加剧，民企在各种挤压下挣扎求生，有大陆民企代表近日批公权太任性，自己所在群的2000多个民营企业家，没有一个说过得好的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 3:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11632799.md#1" target="_blank">消息：习近平对来美签署协议持开放态度</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11632799.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/74c8e6c61d283926280c0c356d28f661-150x120.jpg" align ="left"></a>美中两国周一（11月4日）均释放信号表示，贸易谈判取得进一步进展，可能会在本月晚些时候召开川习会签署协议。知情人士透露，习近平对访美持开放态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 10:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11632569.md#1" target="_blank">港媒披露一带一路项目如何压榨中国劳工</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11632569.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/1805162213472662-150x120.jpg" align ="left"></a>中共的“一带一路”项目持续引发质疑。该项目对外被批是“债务陷阱”，令合作国陷入沉重的债务危机。而对内被指压榨中国劳工的权益。很多人被中国承包商的虚假承诺所诱惑，而一到国外，他们不得在高强度、低薪或缺薪以及没有工伤补偿的情况下工作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 9:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11631236.md#1" target="_blank">分析：大陆楼市入冬 楼盘缘何不降价</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11631236.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1411010353442663-600x400-150x120.jpg" align ="left"></a>大陆楼市销量逐渐下滑，房企面临债务压力，但是在大陆鲜有楼盘降价销售，有大陆业界人士分析了其中的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 8:27 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11631336.md#1" target="_blank">中国美国商会主席：中共未想解决结构性问题</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/4/n11631336.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1128652525-150x120.jpg" align ="left"></a>美中有望达成第一阶段协议，让贸易战停火。美国企业界对此稍感欣慰，但是对于该临时协议能否解决跟中国经济有关的结构性问题，美国企业界领导人并不乐观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 12:51 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11631022.md#1" target="_blank">川普：贸易协议签署地点容易选 会在美国</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11631022.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1LZ0KB-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周日（11月3日）再次强调，美中谈判有进展。他说，签署第一阶段贸易协议的地点很容易选择，将会在美国的某个地方，但首先是要完成协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 11:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11631029.md#1" target="_blank">大陆水果丰收 果农卖不掉 市民吃不起</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11631029.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/3-150x120.png" align ="left"></a>年关将近，辛苦一年的果农好不容易盼到收获的季节，希望好的收成能换来好的收入，过个好年。没想到的是，今年水果大丰收带来的却是亏本灾难。更奇葩的是，果农水果亏本还卖不出去，而城市超市里的水果价格贵，市民吃不起。这到底是什么原因呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 5:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11630805.md#1" target="_blank">美中本月或达第一阶段贸易协议 罗斯表乐观</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11630805.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1LO4YA-150x120.jpg" align ="left"></a>美国商务部长威尔伯·罗斯（Wilbur Ross）周日（11月3日）在曼谷接受媒体采访时，对美中将在本月达成第一阶段贸易协议表示乐观。他还表示，美国公司很快会获得许可，以便能够向中国电信巨头华为出售零部件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 3:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/29/n11620745.md#1" target="_blank">为何5G的推出伴随间谍疑云 发展现状怎样</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/29/n11620745.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1153379629-150x120.jpg" align ="left"></a>全球电信公司正在引入5G无线技术，有望为移动服务带来创新。这是十年来全球手机网络的首次重大升级，也带来新一轮全球技术竞赛。但伴随着5G推出的另一个议题是间谍和安全疑虑，这是为什么呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 10:06 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11630529.md#1" target="_blank">香港太古刀案六伤 区议员被亲共者咬掉左耳</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11630529.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Screen-Shot-2019-11-03-at-13.48.13-150x120.png" align ="left"></a>11月3日傍晚，香港岛太古城中心商场出现持刀袭击案，至少有四人在持刀袭击中受伤，太古区议员赵家贤的耳朵被咬断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 9:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11630018.md#1" target="_blank">欧盟警告：中共面临“承诺疲劳”风险</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11630018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1903012234272378-150x120.jpg" align ="left"></a>欧盟11月1日晚表示，中共长期以来说的开放市场等政策并没有落到实处，现在已经形成了承诺疲劳，并警告中共若不落实这些承诺，在中国投资的商业环境恐变得更不可预测或降低吸引力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 6:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11629850.md#1" target="_blank">陆车市10月销售低于预期 库存高于警戒线</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/3/n11629850.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/bab501b070cc4150bed44f40e92fc8a0-150x120.jpg" align ="left"></a>中国汽车流通协会10月31日发布的数据显示，今年10月份，大陆汽车销售低于经销商们的预期，而且库存预警指数位于警戒线之上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 2:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/19/n11598517.md#1" target="_blank">【内幕】间谍加黑客 中共造国产客机的秘密</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/19/n11598517.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-872371640-150x120.jpg" align ="left"></a>为了在航空业和波音、空客一决高下，中共积极打造国产C919客机。但这款客机研制的背后藏着中共“涡轮熊猫”行动的全球布局。这项秘密行动已经导致一名中国安全专家、一名中国留学生、一名中共国安官员和一名华裔男子被捕，中共国安和黑客全球作案的背后拼图也随之浮出水面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 12:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/2/n11629355.md#1" target="_blank">上海进博会前 欧盟再敲打中共</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/2/n11629355.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/86e1267dacbcd56f94e2cd251eed2dfd-150x120.jpg" align ="left"></a>2019年中国国际进口博览会（简称进博会）下周即将在上海召开。欧盟驻北京代表团敦促中共对商业环境做出迅速而实质性的改善，否则将使欧洲公司出现对中方的“承诺倦怠”（promise fatigue）现象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 4:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/5/n11634264.md#1" target="_blank">拒付5千万广告费 金嗓子董事长被限制消费</a><br></h3>近期，大陆知名喉片金嗓子控股集团有限公司其创办人、74岁的董事长江佩珍，被列为失信被执行人及限制消费人员，即“老赖”。此事前，北京锤子数码科技有限公司及其创办人罗永浩被发“限制消费令”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 4:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid283_10.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_10.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid283_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_10.htm">http://www.epochtimes.com/gb/ncid283_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
