--- a/gb/ncid283_6.md
+++ b/gb/ncid283_6.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国经济</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11667020.md#1" target="_blank">人民币汇率继续走贬?逼近7.03</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11667020.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1159933002-150x120.jpg" align ="left"></a>人民币兑美元汇率再跌。11月19日一度险跌破7.03关口，达到两周来最低点。尽管本月中共央行大规模释放流动性，但市场反应平淡；中美贸易谈判陷僵局，亦或影响人民币走势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666677.md#1" target="_blank">獐子岛扇贝死亡背后 地方政府补助1.8亿</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11460937053-150x120.jpg" align ="left"></a>不断上演扇贝集体“跑路”、“死亡”后，大连獐子岛集团却始终在A股市场上屹立不倒，地方政府在这其中扮演着“关键”角色。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666774.md#1" target="_blank">中国15家车企涉行贿? 新能源车业曝乱象</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175991142-150x120.jpg" align ="left"></a>中国新能源车行业继出现销量大幅下跌后，最近又被爆出行贿受贿案件，双方分别是上海新能源车数据中心前官员和中国15家主要车企。曾经被中共“大跃进”式发展的新能源车行业如今境况惨淡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665604.md#1" target="_blank">潘石屹：未来10年大陆房价或降30%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665604.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/1308140734022320-600x400-150x120.jpg" align ="left"></a>大陆面临人口下滑以及老化，再加上房屋供过于求的状况，SOHO中国董事长潘石屹认为，这些将导致未来10年大陆房价下跌30%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 6:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664858.md#1" target="_blank">未现火爆认购 阿里巴巴香港上市遇冷</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664858.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/GettyImages-455722524-150x120.jpg" align ="left"></a>11月18日是阿里巴巴港股认购第二日，香港券商表示，并没有发生火爆认购的情景，阿里巴巴上市遇冷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 12:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664825.md#1" target="_blank">中国部分工业园土地荒废 多涉及僵尸企业</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664825.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1609290318091758-150x120.jpg" align ="left"></a>中国很多工业园区土地荒废，已经被占用的土地由于企业停产、破产闲置，而过去的过度优惠政策以及缺乏监管是造成如今荒凉景象的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 8:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664625.md#1" target="_blank">分析：中共信贷政策刺激房地产投机泡沫扩大</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/05/5051921081649-150x120.jpg" align ="left"></a>近来中国数百家房企破产引发市场关注，并对中国房地产泡沫表示担忧。海外专业人士结合过去10几年中共的货币政策分析，中国房地产领域的投机泡沫主要是中共政策造成的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664319.md#1" target="_blank">分析：中国银行业陷困境 市场丧失信心</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/e258a84b6c508d5de3d362327fccf0c4-150x120.jpg" align ="left"></a>中国银行业困境已经引起国际关注。资金不足、坏帐增加，令市场丧失信心，也对中国政府（中共）的管理政策表示质疑。事实上，中国的银行危机不仅限于中小型银行，大型银行也同样处于困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664237.md#1" target="_blank">美国宣布延迟华为临时许可90天</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/Huawei-1128822574-600x400-150x120.jpg" align ="left"></a>美国发给华为的部分豁免于11月18日到期，川普（特朗普）政府18日宣布，再延期90天，允许该公司从美公司进货，但华为要购买用于生产其“新产品”的美国零部件仍需申请。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 2:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663197.md#1" target="_blank">国际金融协会：中国整体债务达GDP的306%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663197.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/economy-construction-tian-jing-GettyImages-474029480-150x120.jpg" align ="left"></a>国际金融协会（IIF）最新报告显示，中国2019年上半年的债务占GDP已达306%，其将成为经济增长的沉重负担。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 7:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663413.md#1" target="_blank">华为临时许可证11.18届满 传美再延90天</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663413.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/624badf7da07eb4c78183faccd006eeb-150x120.jpg" align ="left"></a>美国制裁华为的宽限期将于美国时间周一（18日）届满。消息人士说，美国将在周一当天宣布延长华为禁令宽限期90天，允许美国企业继续与华为做生意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 6:50 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662483.md#1" target="_blank">大陆二手房价下跌城市数量超过上涨城市</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662483.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1308140734022320-150x120.jpg" align ="left"></a>中共国家统计局11月15日发布的10月份70个大中城市商品住宅销售价格变动情况统计数据显示，一、二、三线城市新房和二手房销售价格环比涨幅均有所回落。有业界人士表示，如果不出现意外，大陆楼市的拐点真的到来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 3:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662562.md#1" target="_blank">逾六成专业人士预计香港经济将衰退至明年</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/140204064254100311-150x120.jpg" align ="left"></a>澳洲会计师公会发布的调查显示，逾六成来自会计及金融行业的专业人士预计，香港经济衰退将延续到2020年，而预期2019年出现衰退的人数当时仅有两成。此外，有七成受访者认为香港的竞争力将会下降，比率较去年上升25%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 1:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661558.md#1" target="_blank">中共再提刺激汽车消费 被揭产业乱象罔顾民生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661558.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175991142-150x120.jpg" align ="left"></a>中国汽车销量大跌的背景下，中共发改委半年两次称要放宽或取消汽车限购、增加居民的汽车消费。分析认为，专权下的消费者反复“被消费”，中共罔顾民生，而这种短期刺激根本不是促进产业发展的良药。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 12:30 PM							</td></tr>
@@ -15,18 +26,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659564.md#1" target="_blank">神州长城成为大陆首家A、B股双退公司</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659564.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1507311109252584-150x120.jpg" align ="left"></a>深圳证券交易所11月15日晚间公告表示，神州长城股份有限公司股票因连续二十个交易日的A股、B股每日股票收盘价同时均低于股票面值(1元人民币)，将对其予以摘牌退市。这是大陆股市第一只A、B股同时退市的股票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 3:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659488.md#1" target="_blank">美国会报告：中国GDP最低可能仅有3%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/1408220138272663-600x400-150x120.jpg" align ="left"></a>中国经济放缓的态势恐比外界预期严峻。美国国会下属的“美中经济及安全审查委员会”（USCC）14日公布2019年年度报告指出，中国（中共）持续以假造的官方统计数据，掩饰经济放缓的真实情况。报告引述独立观察机构的预测指出，中国经济成长率最低恐仅3%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 12:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659358.md#1" target="_blank">长沙现劣质混凝土建筑 被指官商勾结酿祸</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1709051059021528-150x120.jpg" align ="left"></a>中国湖南劣质混凝土波及近60个项目，涉及官商勾结。中共被指人前大喊口号、人后制造灾祸，导致老百姓没有安全的生存空间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 9:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658834.md#1" target="_blank">【新闻看点】中国经济再下滑 专家吁结构改革</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658834.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/AFP-construction-site-labors-150x120.jpg" align ="left"></a>昨天（11月14日），中共统计局公布了10月份的宏观经济数据，显示中国经济下行的压力仍在增加。对经济下滑趋势明显，两位体制内专家公开向当局发出呼吁：应该“继续改革”，进行结构性调整。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 5:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659113.md#1" target="_blank">中共官员再提经济“虚胖” 分析：无法健康</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659113.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2-guangzhou-city-GettyImages-492909833-150x120.jpg" align ="left"></a>中共中央党校韩保江11月15日说，中国经济下滑与“自我减速”有关，原因是要由“虚胖”变成健康体质。此言论引发业界质疑，中共体制下的经济无法恢复健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:51 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658835.md#1" target="_blank">中国风投行业风光不再 融资规模骤减</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658835.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/00-shanghai-VCG111142760140-150x120.jpg" align ="left"></a>中国风险投资行业风光不再，风险资本融资规模创新低。中国公司的不良记录、安全风险，以及黯淡的盈利前景，令海外投资者撤出中国市场，风险投资基金来源骤减。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 3:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658795.md#1" target="_blank">美中周五高级贸易通话 罗斯：谈判接近终点</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658795.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1180209353-600x400-150x120.jpg" align ="left"></a>美国商务部长威尔伯·罗斯（Wilbur Ross）证实，美中周五（11月15日）将进行高级别贸易谈判，以敲定第一阶段贸易协议。罗斯表示，第一阶段贸易协议的谈判已经接近终点线。他指出，虽然有很高概率就达协议，但中共最后关头会不会令人失望，无人能保证。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 1:38 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658583.md#1" target="_blank">A股三大指数齐跌 沪指失守2900点</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1011131302022320-150x120.jpg" align ="left"></a>11月15日A股三大股指齐齐跳水，沪指失守2900点，深成指和创业板指跌幅均超过1%。从中国经济走势来看，市场对A股前景不乐观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 12:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658351.md#1" target="_blank">中国体制内专家吁中共结构性改革</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658351.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/2cca8d09a38b6223ed2dffe5710d0f52-600x400-150x120.jpg" align ="left"></a>中国经济下滑趋势仍在持续之际，中国有两位体制内专家呼吁应该继续改革，进行结构性调整。不过有评论人士认为，中共当局恐怕未必会采纳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 10:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658005.md#1" target="_blank">美媒披露可怕的中国经济数据 比GDP衰退严重</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658005.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-120773488-150x120.jpg" align ="left"></a>针对中国经济增长趋缓，有分析师预估，其明年的国内生产总值（GDP）增长率可能跌破6%。但有美国媒体指出，还有更惨的经济数据创下历史新低，凸显出中国经济的严重问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 7:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657830.md#1" target="_blank">CPI上涨 PPI下滑 中共央行陷两难</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657830.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1909091340312436-150x120.jpg" align ="left"></a>中共国家统计局日前公布了大陆10月份经济数据，其中消费者物价指数（CPI）同比上涨3.8%，而工业生产者出厂价格指数（PPI）同比下跌1.6%。有大陆智库对此表示，两个指数一个上行，一个下走令中共央行处于两难境地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 7:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657277.md#1" target="_blank">大陆10月份工业消费投资数据均低于预期</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657277.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1411050005272663-150x120.jpg" align ="left"></a>中共国家统计局11月14日发布的经济数据显示，工业增加值、消费品零售总额等数据均低于预期，显示大陆经济下行压力较大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657783.md#1" target="_blank">中国化工企业今年已减少1700家</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/GettyImages-1131960651-3-150x120.jpg" align ="left"></a>据中国石油和化学工业联合会调研统计数字显示，截至今年9月底，中国化工企业已减少约1,700家。而据中商产业研究院监测数据，截至2018年底，中国化工行业企业共计23,513家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11655686.md#1" target="_blank">华为高管访台 台积电成美中必争之地</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/14/n11655686.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-903152606-150x120.jpg" align ="left"></a>华为高管团队上个月来台访问，为确保台湾厂商能在华盛顿和北京拉长的贸易战中持续向华为供应关键的尖端芯片。知情人士表示，华为与台积电（TSMC）的会谈旨在说服这家全球最大的合同芯片制造商向中国出口更多高端产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 2:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11656870.md#1" target="_blank">贸易战打击大陆服务业 从业人员面临失业</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11656870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/03/403111039868-150x120.jpg" align ="left"></a>美中贸易战不仅打击了大陆加工制造业，而运输等服务行业利润也大幅下降，从业人员面临失业风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 12:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665899.md#1" target="_blank">中共屡侵人权 澳洲停止一项20年之久的项目</a><br></h3>澳洲跟中共的关系不断交恶，随着两名澳洲议员签证被拒、中共迫害大量维吾尔人事件爆光、在香港暴力镇压民主运动等，澳洲宣布结束了跟中共的“人权伙伴关系”，废除了一项实施了20年之久的人权项目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661442.md#1" target="_blank">香港理大现大量抓捕 议员被喷胡椒水</a><br></h3>11月17日，警方向香港理工大学疯狂进攻，发射大量催泪弹，喷射有毒的蓝色水柱，晚上重重包围了理工大学，所有从理工大学离开的人士都会被捕。香港民主党议员许智峯与警方交涉时被喷胡椒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 1:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661375.md#1" target="_blank">浓烟密布 港理大数百人被困 多议员赶往现场</a><br></h3>11月17日晚，香港警方已将理工大学周围所有的路口包围，只留一个出口让人出去，但必须要登记身份证，据悉多名香港议员已赶往理大，希望事态缓和下来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 12:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_5.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;6&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283_7.md#1">下一页</a></h3></td></tr>
