--- a/gb/news392_9.md
+++ b/gb/news392_9.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669441.md#1" target="_blank">张林：美国参众两院全票挺香港意义重大</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669441.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1003182344381160-600x400-1-150x120.jpg" align ="left"></a>美国参众两院全票通过香港法案的喜讯，一经传出，网络上立刻沸腾了。因为这是罕见的现象。当年美国政府要攻打纳粹德国，参议员都有6票反对，而众议院居然有50票反对。甚至在日本偷袭珍珠港后，众议院都有一票反对美国对日宣战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667627.md#1" target="_blank">大纪元声明：助港人抗暴政 无惧中共纵火袭击</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/df609e7eccce47b4-600x400-600x400@1200x1200-150x120.jpg" align ="left"></a>2019年11月19日凌晨，承印香港《大纪元时报》的“新时代印刷厂”，一间用纸墨守护人权和自由的工厂，遭蒙面歹徒暴力袭击并纵火。
+
+大纪元集团总裁唐忠表示，大纪元通过中英文多语种媒体及时、真实地把香港民众抵抗中共在香港的暴行传播到世界各地，包括美国政府、国会参众两院，中共尤其惧怕，所以频繁破坏大纪元。我们严厉谴责这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 9:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669057.md#1" target="_blank">王易：鼠疫来了  审判江泽民还远吗</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11669057.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/08/1308121729572404-150x120.jpg" align ="left"></a>这些天，人们为香港人遭中共镇压而揪心外，另一个令人担心的新闻莫过于中国出现鼠疫的新闻了。原因是鼠疫的死亡率可高达100%，历史上在亚欧夺去了上亿人生命。不可一世的罗马帝国就是最后被鼠疫灭掉的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 9:21 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668501.md#1" target="_blank">陈思敏：香港理大被围3日 学生展抗共暴政决心</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668501.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1183436590-e1574199598997-1-150x120.jpg" align ="left"></a>香港理工大学11月17日至19日遭港警重兵围攻，同时中共喉舌公然下指导应实弹射击，震惊国际舆论，引发高度关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:20 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668273.md#1" target="_blank">程晓容：中共不义陷孤立 香港纵火曝末路疯狂</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668273.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d8a1fa5f6c6a79_ttl7dayNmN_Fire_web-150x120.jpg" align ="left"></a>11月19日凌晨，承印香港《大纪元时报》的新时代印刷厂遭人纵火破坏，部分印刷设备和报纸被损毁。这是近年来针对香港《大纪元时报》的第三次蓄意恶性攻击。当前，世界聚焦香港抗争：大学青年浴血奋战，各界声援自由、谴责港警暴行。中共在此时雇凶纵火，企图阻挡真相的传播，充分暴露其流氓凶恶面目，暴露其末路的虚弱和疯狂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 3:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667884.md#1" target="_blank">朱同：枪林弹雨中的一国两制</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1183221099-150x120.jpg" align ="left"></a>今年好几部大片上演，特别精彩，可惜州长换台词了，说“不会再回来”。只剩下香港年度大戏高潮迭起、精彩纷呈，谁是大反派？谁是大英雄？历史一定会揭晓谜底。相信评判的标准不会是“成王败寇”的强盗逻辑；也绝对不会是中共一言堂式的自欺欺人。因为全世界的人民都在看，每个人心中都有杆秤，最终的胜利者必定符合了普世的真理、普世的价值，才.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667745.md#1" target="_blank">【名家专栏】香港若成屠城 中共要付大代价</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667745.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1183198690-150x120.jpg" align ="left"></a>报导传出，中国学生们在香港警方的协助下离境，解放军开始出现在街头。这些不详的迹象，可能预示着中共当局正打算部署更进一步的军事动作。然而，中共或许还意识不到，一旦解放军对香港民众残酷镇压，中共以及中国经济都将为此付出惨痛的代价。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 1:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11667096.md#1" target="_blank">袁斌：香港高院没权裁决《禁蒙面法》违宪吗？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11667096.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a2-4@1200x1200-2-600x400-1-150x120.jpg" align ="left"></a>香港高等法院经过两天审讯后，11月18日裁决‘紧急法’在危害公共安全的情况下使用，违反了基本法，而‘禁蒙面法’对基本权利的限制超乎合理需要，属于违宪。随后，香港警方只好立即宣布暂停执行禁蒙面法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 12:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666918.md#1" target="_blank">周晓辉：港警叫嚣六四重演 谁要做历史罪人？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666918.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-18_18-14-02-600x400-1-150x120.jpg" align ="left"></a>从目前中共官方媒体传递给外界的信息看，一旦六四在香港重演，不管是基于情报的误判还是为保权力而力挺港警的习近平，都将承担最主要责任，他也因此将成为历史的罪人，并随着中共的解体而走向可悲的结局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 5:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11667113.md#1" target="_blank">夏小强：香港理大保卫战的结果和意义</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11667113.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1183221099-150x120.jpg" align ="left"></a>中共在此一役中，全方位把中共的残暴、血腥、毫无底线的邪恶暴露与世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:43 AM			</td></tr>
@@ -9,35 +18,47 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665261.md#1" target="_blank">关晁：十五年前开始的巨变</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665261.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190929123418100615-600x400-1-150x120.jpg" align ="left"></a>人类历史的新篇章在一页一页的翻开。远至天文学者们发现越来越多的天文奇观，从黑洞吞食星体，到巨大星云互相撞击产生新天体体系，整个宇宙大穹在重组、更新，而且正在向太阳系人类逼近；近至地球上从东方到西方，政治、经济、贸易、军事、反恐等等各方面惊变不断，让人们目不暇接。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 1:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664390.md#1" target="_blank">王友群：美英日韩澳台大陆等力挺香港</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/b62674c5e658d47f32c7aebddb0e84dc-150x120.jpg" align ="left"></a>6月爆发的香港反送中运动持续5个多月。港府已撤回“送中条例”，香港人为什么还在抗争？这是许多人不解的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 12:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664268.md#1" target="_blank">周晓辉：美国更改对习称谓 质疑中共合法性</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/USCC-600x400-150x120.jpg" align ="left"></a>从美国暗示中共是恐怖组织，到美国公开区分中共与中国、中国人，再到更改对习近平的称谓，质疑中共执政的合法性，以及针对中共在贸易、军事、科技、网络、人权等一系列举动看，美国正走在支持中国人民摆脱中共邪恶统治的道路上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 4:49 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663369.md#1" target="_blank">石铭：认清中共流氓本性 加速中共解体进程</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1183112925-1-150x120.jpg" align ="left"></a>原中共中央政治局常委、中纪委书记尉健行的撰稿人王友群博士在《齐心协力推倒中共这堵墙》一文中这样描述香港抗争：“2019年6月香港反送中运动爆发以来，中共将过去20年在中国大陆迫害法轮功的各种流氓手段都搬到了香港。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 6:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662711.md#1" target="_blank">陈思敏：美股新高 中共提振股市左支右绌</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662711.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/50fdaa74b58c00f98abf7a70c2f43079-150x120.jpg" align ="left"></a>中美第一阶段协议迟迟签不下来，但无碍美国股市11月15日三大股指集体收涨并均再创历史新高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 5:48 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661849.md#1" target="_blank">【名家专栏】希夫拒绝传唤举报人没有道理</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661849.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/US-POLITICS-CONGRESS-TRUMP-GettyImages-1174488627-150x120.jpg" align ="left"></a>美国众议院情报委员会（House Intelligence committee）主席、加州民主党人亚当·希夫（Adam Schiff） 最近针对川普（特朗普）总统的弹劾调查问题明确回应称，作为整个弹劾调查核心的那位匿名告密者不会在听证会上作证，因为他的证词将是“多余和不必要的”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 4:02 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662194.md#1" target="_blank">唐风：愿荣光归校园——致UBC“爱国”学生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662194.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15cb9cc635de6b36_ttl7daytt4___-600x400-150x120.jpg" align ="left"></a>日前，连续2次参加了UBC大学校园的数百人集会，感慨颇多。第一次约四分之三的人在抗议中共的暴政、声援香港的抗争民众；四分之一的人在唱对台戏，呼喊“爱国”的口号。第二次时十分之八的人为前者，十分之二的人为后者。该活动视频也迅速在学生中、社会上热传、热议。有人留言说“爱国”学生们“缺乏组织，只能零星的叫骂，落入下风，而香港.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 1:11 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662121.md#1" target="_blank">花婆娑：寄语海外留学生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662121.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1412050737062366-150x120.jpg" align ="left"></a>如果我告诉你：香港反送中运动的主流民意是反对港府提出的反送中条例，这与港独无关，你相信吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 9:02 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661980.md#1" target="_blank">诸葛高参：猪年猪瘟 鼠年鼠疫 天灭中共 谁挡谁亡</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661980.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911150309192188-150x120.jpg" align ="left"></a>中国人眼下还奔忙在己亥猪年的人祸——猪瘟里惊魂未定，担心过年还能不能买得起二斤猪肉包饺子吃团圆饭，更惊骇的消息一夜杀来——史上俗称黑死病的鼠疫，已率先登场党国皇都北京。此刻离黄历庚子鼠年还有两个多月！瘟猪未去，疫鼠已来，这是上天惩戒万恶中共的大戏前奏啊！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 7:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661707.md#1" target="_blank">颜丹：由品葱网上的“连侬墙”想到的</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1909280601252188-150x120.jpg" align ="left"></a>自香港中文大学突遭港警的暴力袭击后，有着“墙外知乎”之称的品葱网上就出现了网络版的“连侬墙”。与全球各地建起的“连侬墙”有所不同的是，这面“墙”的打造者全是来自中国大陆的（留）学生及校友。有图片显示，“来自大陆的清华大学、北京大学、四川大学、浙江大学、武汉大学、政法大学、复旦大学和哈尔滨工业大学等数十所大陆”院校的学生.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 4:19 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661481.md#1" target="_blank">张菁：出现鼠疫案例 北京内紧外松</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661481.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/908051910581497-600x400-150x120.jpg" align ="left"></a>11月12日，北京市朝阳区发布“锡林郭勒盟确诊两例鼠疫病例”的消息，引发社会关注。14日凌晨，北京市卫健委发布通告表示：网传在北京宣武医院和北京儿童医院发现鼠疫疑似病例，北京市组织专家力量对两名来自内蒙古鄂尔多斯市的就诊患者进行了综合判断，结合患者流行病学史、临床表现、病原检查，患者不符合鼠疫诊断标准，排除鼠疫，解除隔.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 3:43 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661170.md#1" target="_blank">杜彼得：千鸟飞绝 万人踪灭；孤蓑笠翁 独钓寒江</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661170.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KO54Y-150x120.jpg" align ="left"></a>“退伍军人”的概念在不同的国度里，可能在意义上的解释，会有一定差距。过去在台湾，除非你身体上有缺陷，否则每个人必须服完二年或三年义务兵役后，方能离台出国。但若没有出国，就是退伍军人，时不时仍要接受军方的“教育召集”训练，故简称为“后备军人”。美国会比较盛大的庆祝退伍军人节，是因为二战后国家长期以来都面临大大小小的战争.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 10:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668857.md#1" target="_blank">郑言：揭开中共建立雄安新区惠及百姓的假面纱</a><br></h3>中共打着建立雄安新区是“千年大计，国家大事”，惠及三县百姓、让老百姓有更多获得感的鲜亮旗号，于2017年4月1日，在容城、安新、雄县、三县的大地上，开始了一场疯狂掠夺式的破坏行为。它们强占百姓土地，强拆居民房屋，关停大中小企业几千家。在这过程中，凡对建立新区持有不同言论者，以拘禁、拘留、没收房产、强行罚款、开除公职、刑.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 8:55 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668844.md#1" target="_blank">理悟：倒共烽火</a><br></h3>硝烟火光飞枪弹，
+港警围攻袭校园。
+育人静地成战场，
+共匪邪恶不堪言。
+为捍自由弃生死，
+年轻学子坚信念。
+寸步不让不退缩，
+何其壮烈感地天。
+中大理工港民挺，
+传送物质接人链。
+大陆学友伸援手，
+发声多多能量传。(注)......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:33 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668421.md#1" target="_blank">T：愿荣光光临神州</a><br></h3>何以 黄土地 遭涂炭
+何以 华夏众 心黯然
+红魔 肆虐时 问苍穹 几度
+盼文明 重归 神州
+
+何以 民国情 不曾灭
+何以 香港魂 再度闪耀
+义士 不屈服 在黑暗中 昂首
+迎文明 古老的 神州......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:44 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668378.md#1" target="_blank">关乐：红鼠狼兵休猖狂</a><br></h3>自称自发清路障，镇压抗暴忙明帮。
+八连球衣冠特战，驻港共军出街晃。
+欢迎托前自标榜，民众掌声我形象。
+小品演完溜回营，政治表态传四方。
+人人有责止暴乱，暗示志愿军会上。
+里外蒙骗耍流氓，贼眉鼠眼探风向。
+可晓特战特何处？扮恐反恐祸新疆。
+窝里横枪耗子扛，洞内没虎称天狼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:14 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668328.md#1" target="_blank">梁京：“中国之治”是危及人类的恶治</a><br></h3>在香港危机难以收场的时刻，《纽约时报》又发表了有关新疆集中营的中共秘密文件，无疑对习近平自诩的“中国之治”投下了另一枚重磅炸弹。这些文件揭露的事实，对于珍重和向往自由的人来说，更加坚定了他们对“中国之治”是恶治的认知，但我也看到这样一个事实，那就是对于不少信仰“好死不如赖活”的中国人来说，这些秘密文件所揭露的黑暗事实.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:02 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668157.md#1" target="_blank">中国大陆推动陆港澳融合策略作为及其影响</a><br></h3>我们谈到香港跟中国大陆的关系，很多人都会提到1984年中华人民共和国中央军事委员会主席邓小平跟英国首相柴契尔夫人（Margaret Hilda Thatcher）会面要签署《中华人民共和国政府和大不列颠及北爱尔兰联合王国政府关于香港问题的联合声明》（Joint Declaration of the Government.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 3:48 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668002.md#1" target="_blank">北明：只剩香港</a><br></h3>广大出胸襟，悠久见生成。香港中大（中文大学）前身香港《新亚书院》，中国沦陷后，流亡香港的钱穆先生、唐君毅先生、张丕介先生合力创办，第一批学生是逃难到香港的失学青年。其教育宗旨是“上溯宋明书院讲学精神，旁采西欧大学导师制度，以人文主义之教育宗旨，沟通世界中西文化，为人类和平社会幸福谋前途。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 1:24 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667927.md#1" target="_blank">李春草：历史会记住香港</a><br></h3>专权当世袭青紫，遗臭万年着青史；
+见风使舵助纣虐，卸磨杀驴报不迟；
+莫学虎周永康，逞快一时推一制？
+秦桧长跪众人唾，试看林郑挺时！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 1:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11667853.md#1" target="_blank">凌晓辉：中国人民都是共产主义的受害者（下）</a><br></h3>针对西藏、香港现状与台湾大选等问题，悉尼科技大学中国研究中心于11月16日下午，在该校举行了西藏议会议员代表团与澳洲华人交流研讨会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 12:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666754.md#1" target="_blank">杨吒：蚊虫、蜱虫、跳蚤怎么能杀死人</a><br></h3>人的生命是很坚强伟大的：人能制造出宇宙飞船上天；人能打死老虎；人能在荒岛上独自生活二十年；人能被截掉双腿或手臂在轮椅上生活一世……但是，现代人却被一只蚊虫或蜱虫或跳蚤咬死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666079.md#1" target="_blank">可心：哈佛教授“修昔底德陷阱论”能解读中美贸易战吗</a><br></h3>二零一五年九月，习近平访美期间，哈佛大学教授、肯尼迪政府学院创建者之一、国际关系学者格雷厄姆?艾利森（Graham Allison）在《大西洋月刊》（The Atlantic）发表了一篇名为〈修昔底德陷阱：美国和中国正在走向战争？〉的文章，文章指出正在崛起的中国必将冲击美国主导的国际秩序，两国之间极有可能爆发战争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 9:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664839.md#1" target="_blank">袁斌：港警称“信不信我在这强奸你”的背后</a><br></h3>“信不信我在这强奸你？”如此恐吓一个年轻女子，会出自什么样人之口？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 12:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664521.md#1" target="_blank">杨吒：西方文化革命对中国人的伤害极为阴毒</a><br></h3>大纪元网站纪元社论在2018年5至12月刊登了《魔鬼在统治着我们的世界》一宏篇巨作后，在世界范围内再次掀起了认识共党魔鬼本质的高潮，至今热浪未退。阅读该书的每一篇，对清除读者生命中共党毒素、提升道德、开启智慧、升华思想境界都有巨大作用。共产党对政治的变异、对传统经济的破坏、对法律的践踏、对教育和新闻的魔化等等，篇篇睿智.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 4:49 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664349.md#1" target="_blank">张林：纽约支港联昨天召开香港形势研判会</a><br></h3>昨天下午，支港联第31次舆磐石教会的弟兄姊妹在法拉盛图书馆举行挺香港自由图片展览及视频播放活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 2:22 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663465.md#1" target="_blank">百人围观9岁儿童被打死 人性缺失谁之过</a><br></h3>11月6日，湖南长沙一名9岁男童罗棋在居家社区内被人活活打死，凶手施虐持续近半小时，围观者有约一百人，然而围观民众却无一人上前阻止，其中不乏认识小男孩的邻居和社区保安。现场围观者的反应，成为舆论焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 10:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662650.md#1" target="_blank">雪绮：助天灭共 莫当中共陪葬品</a><br></h3>现今看似香港被中共逼上绝路之境；而实质上，中共是全无底限的全面自断后路。在“三罢”之余，全体港民众，皆为子孙们及自身的人权及合法权益，出面公开抗争！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 1:43 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662514.md#1" target="_blank">耿静：祭奠杨永年教授</a><br></h3>中国人，应该去找出微生物学家、免疫学家杨永年教授这个名字，他是东北人，他是战后平息中国鼠疫的医学学术领袖。奉劝你们把网上屏蔽他的信息都解开，去学习一下杨永年教授当时是如何平息鼠疫的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 12:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662172.md#1" target="_blank">理悟：君子不立危墙下</a><br></h3>
-
-猪年不吉闹猪瘟，猪荒惨烈从未闻。
-肉价攀超百分百，万品皆贵苦平民。
-鼠年未到噩耗到，鼠疫匆匆先登门。
-人心惶惶心无主，党妈捂盖是何因？
-百姓死活皆小事，党妈保命忙维稳。
-痴迷党妈梦当醒，天灭中共步步紧。
-老猪摔耙不捧场，耗子值年送鼠瘟。
-自古亡朝多败象，天灾人祸乱纷纷。
-打压异声彰血色，活摘器官.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 9:16 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660374.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（2）</a><br></h3>近代之前的中国与西方世界在相互隔离的状态下发展了几千年后，发展成了两个全然不同的社会，语言文字、文化、技术、建筑等所有方面看起来都全然不同。近现代以前的很长一段时间，西方都是用“神秘”这个词来形容中国，包含着难以理解、不可思议等含义。但是学术界、科学界并未对这种神秘背后的深层含义有更多的关注，人们多是以一种猎奇和表面现.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 3:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news392_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news392_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news392_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_9.htm">http://www.epochtimes.com/gb/news392_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
