--- a/gb/nf3046_8.md
+++ b/gb/nf3046_8.md
@@ -8,6 +8,8 @@
 单页尺寸点击下载a4-163......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月13日 5:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/4/8/n11171176.md#1" target="_blank">台湾国父纪念馆景点上 大陆人的“指路灯”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/4/8/n11171176.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/2019-4-6-mh-taiwan-jingdian-04-150x120.jpg" align ="left"></a>在台北国父纪念馆的忠孝东路大门边的人行道上，一位五十多岁的女士焦急地东张西望，汗珠顺着她的两颊流下来。她抬眼看到法轮功真相展板，忽然想起导游说过的话：“你们如果迷路的话，就来找法轮功（学员）问路，就会知道怎么走，他们会帮助你们。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月09日 9:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/3/24/n11136951.md#1" target="_blank">抛弃中共 大陆民众三退声明传心声（上）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/3/24/n11136951.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/p8755331a280654207-150x120.jpg" align ="left"></a>认清中共邪恶本质，3.2亿多中国人退出中共的党团队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月25日 6:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/4/25/n11211620.md#1" target="_blank">每日三退声明精选（2019/04/24）</a><br></h3>共产邪党败象尽显，摄像头全城覆盖，没有死角，这里是三、四线城市，这次一次性再投入二个亿人民币，新安装了包括在街道的人行道每三、四十米就有高清人脸识别系统。地方财政发工资都在借钱了，说明共产邪党是惊恐万分，也感到末日恐慌，把中国大陆已经实实在在变成了一座大监狱了。在此严正声明退出邪党的一切邪恶组织，愿解体中共的这一天早日到来！让善良的中国人不生活在恐惧中，做干.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月25日 11:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/4/24/n11208916.md#1" target="_blank">每日三退声明精选（2019/04/23）</a><br></h3>共产党最坏、最残忍、总拿不是当理说，颠倒黑白，一党制弊端太多。中国人作假，中国人坏和它有关系，谁说共产党好，真瞎了眼睛。官员到一定级别吃特供，老百姓却吃化肥农药激素超标的，江泽民出卖领土等等，共产党的末日快到了。 我退党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月24日 10:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/4/23/n11206541.md#1" target="_blank">每日三退声明精选（2019/04/22）</a><br></h3>善恶有报是不变的天理，共产党在历史上迫害正义和善良欠下的太多了，以后到其党要偿还的那一天，如果人不退出就难免受其累，从历史中不难发现共产的高压政策对于社会的发展是多畸形，甚至不容许人民有一点反对的想法，并且在教育方面进行洗脑，这种愚民政策只不过自欺欺人，只要国外留学，原形毕露，只是迫于其力量无人敢言。郑重声明退出中共邪党的共产党组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月23日 11:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/4/22/n11204617.md#1" target="_blank">每日三退声明精选（2019/4/21）</a><br></h3>中共邪党1959年至1961年三年饿死人太多了，我那时读中学，被派去芦山县思延乡埋被中共邪党大里饿死的人，因那里饿死很多人，活着的人也快饿死了没力气埋死人，所以派我们学生娃去埋死人，因死人太多，我们也没力气抬了，就拖尸体丢到河边。那地方是产粮的平坝乡，共产邪党虚报年产粮食双亿斤，把粮都收走了，都快把那里的人饿死完了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月22日 3:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/4/21/n11201906.md#1" target="_blank">每日三退声明精选（2019/04/20）</a><br></h3>在当今天的中国，人民看到的更多得是压迫和管制，限制百姓的思维，行动，言语，无论是90后还是40后，都会对现在的政党和社会环境感觉要人窒息。生活在一个生病的环境里，要人的身心处于压抑和亚健康。法轮功让我们看到了希望，信仰真，善，忍才是中国最后的希望。现明白真相的人坚决退出和共产党一切有关的不知情糊涂加入的党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月21日 10:51 AM							</td></tr>
@@ -33,7 +35,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/3/27/n11142740.md#1" target="_blank">每日三退声明精选（2019/03/26）</a><br></h3>我相信神佛，听说中共年初炸毁了石家庄的一个摩崖观音立像，感到气愤，如果这世界有神佛，不会保佑无神论的党徒，我声明退出中共团队，做有信仰的好人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月27日 11:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/3/25/n11137839.md#1" target="_blank">每日三退声明精选（2019/03/24）</a><br></h3>我决定退队，中共是专制独裁政府，中共是以迫害制国，谎言开路，欺骗中国人民，我知道它是邪灵，它是由恨和废物败类组成的。中共的历史就是一部杀人的历史！退党是一件大好事！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月25日 12:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/3/23/n11134056.md#1" target="_blank">每日三退声明精选（2019/03/22）</a><br></h3>邪党是流氓组织起家，几十年来利用各种运动手段对中华民族进行荼毒。当今全国各地一片混乱，老虎苍蝇越生越多，维稳经费掏空国库，经济下滑，雾霾、毒疫苗、非洲猪瘟飞速蔓延??，前所未有的败象警示邪党已到解体边缘！我们三人郑重声明：退出曾经加入过的共青团、少先队组织，不与邪恶为伍，不给邪党当陪葬，做正直好人，走光明之路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月23日 11:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/3/22/n11131345.md#1" target="_blank">每日三退声明精选（2019/03/21）</a><br></h3>中共的邪恶欺骗是从小开始的，把其共产邪说渗透到幼稚园及小学的日常教育中的，并诱导强迫所有学生对共产邪灵奋斗终生，并让其追随者对着血旗发毒誓，随时献出生命的代价。让我们共同认清中共的邪恶，遵从心底与生而来的善良，听从正义的，神的召唤，不与邪恶为伍；在此郑重声明退出中共少先队组织，选择光明的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月22日 10:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/3/21/n11128611.md#1" target="_blank">每日三退声明精选（2019/03/20）</a><br></h3>我是山东农民，在我们农村，靠种几亩土地维持不了一家人的生活开支，更不可能支付买房、子女上学、医疗等天文数字的费用。离开家到城里想靠倒菜卖菜做点小本生意赚点钱，还被城管人员到处追赶，真很难生活。想到我们是纳税人，是我们的血汗钱养活着那么多城管人员，养活着几百万党官、贪官，而大量的高官、贪官、裸官和权贵把在国内贪占、掠夺的巨额财富转移到西方所谓的“帝国主义”或“.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月21日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_7.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;8&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_9.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/nf3046_8.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_8.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/nf3046_8.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_8.htm">http://www.epochtimes.com/gb/nf3046_8.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
